--- a/product/计算与网络/云硬盘/产品简介/云硬盘类型.md
+++ b/product/计算与网络/云硬盘/产品简介/云硬盘类型.md
@@ -46,35 +46,35 @@ SSD 云硬盘是腾讯云基于 NVMe SSD 存储介质提供的全闪型存储类
 </tr>
 <tr>
 <td>单盘最大 IOPS</td>
-<td>叠加额外性能后达到<br>1000000</td>
-<td>叠加额外性能后达到<br>100000</td>
+<td>叠加额外性能后达到1000000</td>
+<td>叠加额外性能后达到100000</td>
 <td>26000</td>
 <td>10000</td>
 <td>6000</td>
 </tr>
 <tr>
 <td>随机 IOPS 性能计算公式</td>
-<td><b>基准性能</b>：随机 IOPS = min{4000+容量(GiB)×100 , 50000}<br><b>额外性能</b>：最大 IOPS = min{额外性能值×128 , 950000} <br></td>
-<td><b>基准性能</b>：随机 IOPS = min{1800+容量(GiB)×50 , 50000}<br><b>额外性能</b>：最大 IOPS = min{额外性能值×128 , 50000} <br>详情请参见 <a href="https://cloud.tencent.com/document/product/362/51896">增强型 SSD 云硬盘性能说明</a></td>
-<td>随机 IOPS = min{1800+容量(GiB)×30 , 26000}</td>
+<td><b>基准性能</b>：随机 IOPS = min{4000+容量(GiB)×100, 50000}<br><b>额外性能</b>：最大 IOPS = min{额外性能值×128, 950000} <br></td>
+<td><b>基准性能</b>：随机 IOPS = min{1800+容量(GiB)×50, 50000}<br><b>额外性能</b>：最大 IOPS = min{额外性能值×128, 50000} <br>详情请参见 <a href="https://cloud.tencent.com/document/product/362/51896">增强型 SSD 云硬盘性能说明</a></td>
+<td>随机 IOPS = min{1800+容量(GiB)×30, 26000}</td>
 <td>随机 IOPS = min{1800+容量(GiB)×15,10000}</td>
-<td>随机 IOPS = min{1800+容量(GiB)×8 , 6000}</td>
+<td>随机 IOPS = min{1800+容量(GiB)×8, 6000}</td>
 </tr>
 <tr>
 <td>单盘最大吞吐量(MB/s)</td>
-<td>叠加额外性能后达到<br>4000MB/s</td>
-<td>叠加额外性能后达到<br>1000MB/s</td>
+<td>叠加额外性能后达到4000MB/s</td>
+<td>叠加额外性能后达到1000MB/s</td>
 <td>260MB/s</td>
 <td>190MB/s</td>
 <td>150MB/s</td>
 </tr>
 <tr>
 <td>吞吐性能计算公式(MB/s)</td>
-<td><b>基准性能</b>：吞吐 = min{120+容量(GiB)×0.5 , 350} <br><b>额外性能</b>：吞吐 = min{额外性能值×1 , 3650}<br></td>
-<td><b>基准性能</b>：吞吐 = min{120+容量(GiB)×0.5 , 350} <br><b>额外性能</b>：吞吐 = min{额外性能值×1 , 650}<br>详情请参见 <a href="https://cloud.tencent.com/document/product/362/51896">增强型 SSD 云硬盘性能说明</a></td>
-<td>吞吐 = min{120+容量(GiB)×0.2 , 260}</td>
+<td><b>基准性能</b>：吞吐 = min{120+容量(GiB)×0.5, 350} <br><b>额外性能</b>：吞吐 = min{额外性能值×1, 3650}<br></td>
+<td><b>基准性能</b>：吞吐 = min{120+容量(GiB)×0.5, 350} <br><b>额外性能</b>：吞吐 = min{额外性能值×1, 650}<br>详情请参见 <a href="https://cloud.tencent.com/document/product/362/51896">增强型 SSD 云硬盘性能说明</a></td>
+<td>吞吐 = min{120+容量(GiB)×0.2, 260}</td>
 <td>吞吐 = min{100+容量(GiB)×0.2, 190}</td>
-<td>吞吐 = min{100+容量(GiB)×0.15 , 150}</td>
+<td>吞吐 = min{100+容量(GiB)×0.15, 150}</td>
 </tr>
 <tr>
 <td>单路随机读写时延</td>
