--- a/product/企业应用/腾讯问卷/常见问题/常见问题.md
+++ b/product/企业应用/腾讯问卷/常见问题/常见问题.md
@@ -44,11 +44,11 @@
 - 可能是个别红包状态有异常。请联系官方客服：2852519734 告知问卷号。
 
 
-## 腾讯问卷可导出的问卷数量有限制吗	
+### 腾讯问卷可导出的问卷数量有限制吗	
 没有限制。
 
 
-## 腾讯问卷不同版本有什么区别？	
+### 腾讯问卷不同版本有什么区别？	
 腾讯问卷共推出了免费版、团队版、私有部署版，具体区别如下：
 - **免费版**：已经上线5年时间，提供了从问卷设计、投放、分析的所有通用功能，可以满足日常调查及数据收集工作的开展，并将永久免费。
 - **团队版**：则是根据企业用户的个性化需求推出的付费版本，团队版包含免费版的所有功能，且增加了隐藏问卷广告、版权信息隐藏及自定义、API 接口、填答完成后跳转自定义页面、提升了附件题储存空间等其他个性化的功能和服务，详情请参见 [团队版介绍](https://wj.qq.com/enterprise.html)。
@@ -56,7 +56,7 @@
 
 
 
-## 腾讯问卷如何购买	
+### 腾讯问卷如何购买	
 **腾讯问卷免费版**可以直接访问 [腾讯问卷官网](https://wj.qq.com/) 使用，无需购买。
 **腾讯问卷企业版购买指引：**
 1. [注册腾讯云 ](https://cloud.tencent.com/document/product/378/17985)账号并完成[ 实名认证](https://cloud.tencent.com/document/product/378/3629)。
@@ -70,7 +70,7 @@
 
 
 
-## 腾讯问卷定价说明
+### 腾讯问卷定价说明
 **定价方案**
 腾讯问卷团队版的计费主要包括：团队版套餐和资源包套餐。
 团队版套餐是必选计费项，定价依据可使用人数、时长两个因素。并根据可使用人数划分6个档次套餐，每种套餐按年按月计费不同。
@@ -108,7 +108,7 @@
 短信作为资源包项，免费和团队版用户均可购买，不设有效期，用户套餐变更等对短信量不影响。
 
 
-## 腾讯问卷数据分析	
+### 腾讯问卷数据分析	
 - 电脑端
  - 腾讯问卷可以对问卷回收数据实时统计并以图表化展示，还可以通过选项变量之间的关系进行交叉分析。
  - [查看统计结果](https://cloud.tencent.com/document/product/1304/49147#.E6.9F.A5.E7.9C.8B.E7.BB.9F.E8.AE.A1.E7.BB.93.E6.9E.9C)
@@ -128,7 +128,7 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 
 
 
-## 腾讯问卷如何设置问卷？	
+### 腾讯问卷如何设置问卷？	
 - 电脑端
 腾讯问卷可以通过对问卷的**显示、回收、奖品、协同编辑**进行精细化的设置，您可以根据自身需求对相应的功能进行开关，实现智能、灵活的在线问卷管理。
 进入问卷编辑页，单击左上角**设置**，见下图：
@@ -153,7 +153,7 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 
 
 
-## 腾讯问卷管理问卷	
+### 腾讯问卷管理问卷	
 - 电脑端
 问卷编辑、预览完成后，一份在线问卷即完成，此时您可以通过对问卷的复制、编辑、删除、发布、统计、导出、分享等功能，实现对问卷的全面管理。
 [视图管理](https://cloud.tencent.com/document/product/1304/49146#.E8.A7.86.E5.9B.BE.E7.AE.A1.E7.90.86)：我的问卷页分两种视图展示问卷：网格视图和列表视图，可自由切换。
@@ -170,18 +170,18 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
     - 开始回收：问卷已生成有效链接，即填写者可以通过链接回答并提交问卷，标题前绿色小圆点标识。
 
 
-## 腾讯问卷如何预览问卷	
+### 腾讯问卷如何预览问卷	
 问卷编辑完成后，您可以通过预览来检查问卷编辑效果，也可以将问卷链接或二维码发送给其他人进行检查确认，从而保证编辑的准确性，腾讯问卷支持多终端自适应，可以直接在电脑、手机端查看预览效果。
 ![image.png](https://img-cdn.wezhuiyi.com/yibot/456786921/images/rrwfoiw814jdh27fl2w0p.png)
 单击问卷编辑页右上角的**预览**，即可看到两种终端预览效果：手机预览和电脑预览。问卷会根据不同的终端（电脑/手机）自适应。您也可以在预览页通过**分享**将问卷发送给其他人查阅。
 >! 暂停回收状态下提交的问卷数据不会被记录，请务必单击**开始回收**后再分享问卷。
 
-## 腾讯问卷提供哪些题型？	
+### 腾讯问卷提供哪些题型？	
 腾讯问卷提供单选题、下拉题、多选题、单行文本题、多行文本题、量表题、矩阵单选题、矩阵多选题、矩阵量表题、排序题、联动题、附件题、填空题等14种题型，并支持题型直接切换。
 
 
 
-## 腾讯问卷如何投放问卷？	
+### 腾讯问卷如何投放问卷？	
 - 在电脑端**编辑**界面完成问卷编辑后，单击左上角**投放**，进入投放界面后单击右上角**开始回收**。
  - 可直接复制问卷的链接发给填写人员，或单击**下载二维码**保存图片分享。也可用手机扫描问卷二维码，进入问卷答题界面后，单击右上角 **···** 分享至微信/企业微信/QQ端或朋友圈。
  - 链接下的图标依次为：微信、微信小程序、QQ、QQ空间、新浪微博五个渠道，可直接单击任一图标将问卷分享到相应渠道。
@@ -191,7 +191,7 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
  - 单击 **···** 分享至微信/企业微信/QQ端或朋友圈。
 
 
-## 腾讯问卷如何创建问卷？	
+### 腾讯问卷如何创建问卷？	
 腾讯问卷创建问卷步骤如下：
 - 电脑端：
 [方式1：创建空白问卷](https://cloud.tencent.com/document/product/1304/49141#.E6.96.B9.E5.BC.8F1.EF.BC.9A.E5.88.9B.E5.BB.BA.E7.A9.BA.E7.99.BD.E9.97.AE.E5.8D.B7)
@@ -202,17 +202,17 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 [方式1：创建空白问卷](https://cloud.tencent.com/document/product/1304/49148#.E6.96.B9.E5.BC.8F1.EF.BC.9A.E5.88.9B.E5.BB.BA.E7.A9.BA.E7.99.BD.E9.97.AE.E5.8D.B7)
 [方式2：选择问卷模板](https://cloud.tencent.com/document/product/1304/49148#.E6.96.B9.E5.BC.8F2.EF.BC.9A.E9.80.89.E6.8B.A9.E9.97.AE.E5.8D.B7.E6.A8.A1.E6.9D.BF)
 
-## 腾讯问卷使用出现敏感字怎么处理	
+### 腾讯问卷使用出现敏感字怎么处理	
 可在新编辑器题目设置里设置为敏感信息收集题即可去除敏感提示。
 
-## 怎么删除自己填写过的腾讯问卷？	
+### 怎么删除自己填写过的腾讯问卷？	
 鼠标选中问卷页签，单击**×**即可删除该页及上面的所有题目。
 ![](https://qcloudimg.tencent-cloud.cn/raw/b7e114822ec4dc91f9db5577befd3ebc.png)
 >?删除页同时也会删除该页上的所有题目，请谨慎操作。暂不支持整页复制功能。
 
 
 
-## 腾讯问卷如何登录使用？	
+### 腾讯问卷如何登录使用？	
 腾讯问卷支持通过电脑端跟移动端两种操作步骤：
 - 电脑端：
  - 步骤1：登录官网
@@ -238,11 +238,11 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 <img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/f8ba13ec513a7c188b4f4fc58b39f1b8.png" />
 
 
-## 腾讯问卷团队版套餐可使用人数是什么意思	
+### 腾讯问卷团队版套餐可使用人数是什么意思	
 腾讯问卷团队版套餐**可使用人数**是指可以使用问卷团队版功能进行创建、编辑等操作的人数，请您知悉。
 
 
-## 腾讯问卷各版本计费方式	
+### 腾讯问卷各版本计费方式	
 腾讯问卷分为三个版本，其定价方式如下：
 **免费版**可以直接访问 [腾讯问卷官网](https://wj.qq.com/) 使用，无需购买。
 团队版计费使用包年包月 + 按量计费的付费模式，其中团队版功能按可使用人数分为不同档次的套餐，每一种套餐以包年包月的方式计费。而短信资源包则以按量的方式计费。
@@ -252,7 +252,7 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 私有部署版本根据用户具体功能需求，按成本评估定价，请先 [联系客服](https://cloud.tencent.com/document/product/1304/49115) 咨询。
 
 
-## 如何购买腾讯问卷团队版	
+### 如何购买腾讯问卷团队版	
 腾讯问卷团队版购买步骤如下：
 >!由于购买腾讯问卷团队版需关联腾讯云账号，请先注册/登录腾讯云账号
 
@@ -277,31 +277,31 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 	 <img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/540c84b0eccf63238e4505838452b135.png" />
 
 
-## 腾讯问卷退费说明	
+### 腾讯问卷退费说明	
 腾讯问卷团队版当前为全预付费服务，选购支付完成后将无法退费或关闭订单。
 
 
-## 腾讯问卷是否支持定制？	
+### 腾讯问卷是否支持定制？	
 私有部署版本是可以支持定制的，定制的费用也是按照功能开发成本评估给出，可在官网添加腾讯问卷官方客服咨询。
 >?腾讯问卷私有部署版本价格是根据用户实际使用需求按照成本评估定价的，按照具体情况评估给出，收费价格主要根据需要的功能模块和性能要求制定。
 
-## 腾讯问卷用户怎么导入？	
+### 腾讯问卷用户怎么导入？	
 目前线上版本仅支持 QQ 和 [微信用户](https://cloud.tencent.com)，后期会通过开放平台逐渐支持其他账号。
 
 
 
-## 腾讯问卷如何自定义问卷逻辑	
+### 腾讯问卷如何自定义问卷逻辑	
 腾讯问卷自定义逻辑可以快速地操作问卷底层能力，实现复杂的逻辑定制，提高问卷逻辑设置的效率。目前已经实现了多条件组合的显示逻辑、非逻辑、题目内容引用替换、题目选项分组随机等功能，更多功能正在陆续开发中，目前自定义逻辑处于对外推广阶段，限时免费使用。
 ![](https://qcloudimg.tencent-cloud.cn/raw/e3a788bd6061cba77d569f05197b4715.png)
 
 
 
-## 腾讯问卷如何让指定的人回答问卷？	
+### 腾讯问卷如何让指定的人回答问卷？	
 电脑上进入问卷设置界面开启**限定答题白名单**，单击**设置用户白名单**，可批量添加 QQ 号/手机号/企业微信号。
 添加企业微信号白名单请在企业微信电脑/手机客户端进入问卷设置界面，开启**限定答题白名单**后，单击**选择用户范围**选择**全公司**，或单击**部分成员** > **添加用户**，调用企业微信通讯录名单选择指定用户。
 >?请先在企业微信“应用设置”——“可见范围”里加入需要添加的白名单账号，非白名单内用户访问问卷，则无法打开并提示如下图所示。![](https://qcloudimg.tencent-cloud.cn/raw/ad82ed4c539606f9117da98e719aaf96.png)
 
-## 腾讯问卷如何设置抽奖？
+### 腾讯问卷如何设置抽奖？
 腾讯问卷可设置自定义奖品或红包奖励。
 - 添加自定义奖品
 电脑端进入问卷设置界面开启**出题人提供奖品**，可以实现答题者答完问卷后自动抽奖功能（为防止刷奖，系统自动开启登录验证）。单击**设置抽奖规则**，可以设置奖品名称、截止时间、发奖方式、中奖概率等信息。
@@ -310,21 +310,21 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 电脑端进入问卷设置界面开启**微信红包奖励**，单击**设置微信红包**可以选择**拼手气红包**或**等额红包**。二者区别在于中奖的用户拿到的红包金额是相同的，还是随机不等的。设定好后单击**确定**会自动跳转至付款页面，使用微信扫码支付成功后即添加成功。
 
 
-## 腾讯问卷标题支持上传图片吗	
+### 腾讯问卷标题支持上传图片吗	
 腾讯问卷标题**不支持**上传图片，只能输入文字将其加粗或者插入超链。
 ![](https://qcloudimg.tencent-cloud.cn/raw/81076e02cbe12390341c0059d0582e48.png)
 如果需要添加背景图可以使用企业版皮肤设置，详情请参见 [官网文档](https://cloud.tencent.com/document/product/1304/49118)。
 
 
 
-## 腾讯问卷欢迎语的字数限制	
+### 腾讯问卷欢迎语的字数限制	
 腾讯问卷欢迎语字数限制是100个字，如下图所示：
 ![](https://qcloudimg.tencent-cloud.cn/raw/e65ae98c9f22bdab2fc90ccb8db3de61.png)
 >?免费版本和企业版本腾讯问卷欢迎语字数限制是一致的。
 
 
 
-## 腾讯问卷如何编辑问卷题目？	
+### 腾讯问卷如何编辑问卷题目？	
 编辑题目操作如下：
 - 电脑端
  - [欢迎语和结束语编辑](https://cloud.tencent.com/document/product/1304/49142#.E6.AC.A2.E8.BF.8E.E8.AF.AD.E5.92.8C.E7.BB.93.E6.9D.9F.E8.AF.AD.E7.BC.96.E8.BE.91)
@@ -341,7 +341,7 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
  - [选项编辑](https://cloud.tencent.com/document/product/1304/49149#.E9.80.89.E9.A1.B9.E7.BC.96.E8.BE.91)
 
 
-## 腾讯问卷如何发布问卷	
+### 腾讯问卷如何发布问卷	
 - 电脑端
  - 问卷完成编辑之后，需要进行投放，腾讯问卷可以方便地通过问卷链接、社交网分享、二维码等进行投放。
  - [问卷发布](https://cloud.tencent.com/document/product/1304/49145#.E9.97.AE.E5.8D.B7.E5.8F.91.E5.B8.83)
@@ -351,23 +351,23 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
  - [分享问卷](https://cloud.tencent.com/document/product/1304/49151#.E5.88.86.E4.BA.AB.E9.97.AE.E5.8D.B7)
 
 
-## 腾讯问卷如何添加图片/视频？	
+### 腾讯问卷如何添加图片/视频？	
 在编辑问卷题目或选项时，都可以插入图片和视频功能，将鼠标移至上传图片位置后出现富文本标签栏，单击图像图标，上传图片；单击摄像机图标，上传视频。
 
 
 
-## 腾讯问卷如何设置问卷回收通知？	
+### 腾讯问卷如何设置问卷回收通知？	
 在问卷设置界面开启**问卷回收提醒**后，单击**绑定协管员**并设置推送频率。答题者提交问卷后会通过“腾讯问卷”公众号推送相关通知（请关注“腾讯问卷”公众号）
 >!
 >- 每天推送上限24次。
 >- 使用企业微信账号创建的问卷开启**每日打卡**后，将通过企业微信推送通知。
 
 
-## 腾讯问卷如何设置提交问卷后可以修改？	
+### 腾讯问卷如何设置提交问卷后可以修改？	
 在问卷设置界面开启“允许用户修改答案”，答题者提交问卷后可再次进入问卷修改已提交的内容。如果已开启限答，则仅保留最后一份提交问卷；如果不限回答次数，则保留每次提交的问卷。
 
 
-## 腾讯问卷如何设置协助管理员	
+### 腾讯问卷如何设置协助管理员	
 - **QQ 用户**：正确输入协助者的 QQ 号，单击**+**，即可完成添加。
 - **微信用户**：将微信用户界面下方二维码发给相应人员进行扫码加入。
 >?微信用户协助管理员需要在二维码有效期内扫码。
@@ -376,25 +376,25 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 
 
 
-## 腾讯问卷如何使用样本服务？	
+### 腾讯问卷如何使用样本服务？	
 在电脑上编辑完问卷后单击右上角**开始回收** > **投放** > **回答小组**进入样本服务界面。根据需要选定回答人群属性及数量后，单击**单击估算奖励金**会自动计算样本费用。确认无误后勾选**我已阅读并同意**，单击**支付并投放**，自动跳转支付界面，请使用微信扫码并支付。支付成功后，系统会自动将问卷投放给符合人群属性的用户。
 >?单次最大投放数量为6000，如需投放更多，请在首次投放完以后单击**再次投放**或**重新投放**分批投放。
 
 
-## 腾讯问卷如何删除协助管理员	
+### 腾讯问卷如何删除协助管理员	
 单击协作者右侧的蓝色字体**全部权限**，再单击删除协管员即可。
 >!问卷原始创建者不能被删除。
 
 
-## 腾讯问卷如何设置问卷结束时间？	
+### 腾讯问卷如何设置问卷结束时间？	
 在问卷设置界面开启**设定问卷结束时间**并选择截止时间，问卷会在设定的对应时间停止提交问卷。
 
 
-## 腾讯问卷回答小组是什么？	
+### 腾讯问卷回答小组是什么？	
 腾讯问卷回答小组，是腾讯问卷为帮助问卷投放者邀请符合其投放条件的人群填写问卷，并帮助回答小组成员获得更多回答问卷机会而推出的问卷投、答功能。投放者通过红包或甜圈（回答小组的专属奖励）发起调研，回答者按要求完成答卷并被标记为有效回答后获得红包或甜圈奖励，投放者的红包和甜圈将全部发放给回答者，未发放完的原路退回投放者账号，让调研资源真正用在付出劳动的答题者身上，没有中间环节费用。
 回答小组作为连接问卷投放者和回答者的桥梁，实现了问卷从创建、投放、回收的一体化调查服务。
 
 
 
-## 腾讯问卷如何设置限答？	
+### 腾讯问卷如何设置限答？	
 在问卷设置界面开启**每个用户只能回答一次**，则每个账号只能回答一次问卷，不能重复回答。
