--- a/product/移动与通信/即时通信/SDK文档/7常规集成 SDK（无 UI 库）/7群组相关/群组管理2.0（iOS）.md
+++ b/product/移动与通信/即时通信/SDK文档/7常规集成 SDK（无 UI 库）/7群组相关/群组管理2.0（iOS）.md
@@ -201,7 +201,7 @@ memberInfo.userID = @"vinson";
 ### 获取群资料
 调用 [getGroupsInfo](https://im.sdk.qcloud.com/doc/zh-cn/categoryV2TIMManager_07Group_08.html#aeeffef844fd0948dda227620f0fac895) 可以获取群资料，该接口支持批量获取。您可以一次传入多个 `groupID` 获取多个群的群资料。
 
-### 修改群资料
+### 修改群资料[](id:setGroupInfo)
 调用 [setGroupInfo](https://im.sdk.qcloud.com/doc/zh-cn/categoryV2TIMManager_07Group_08.html#a13b25d1f491e18ab0ba953ffc2ca9e82) 可以修改群资料。群资料被修改后，全员会收到 [onGroupInfoChanged](https://im.sdk.qcloud.com/doc/zh-cn/protocolV2TIMGroupListener-p.html#ae07b62dc7f41e4c0fe74e515fd80f6ad) 回调。
 >!
 > - 好友工作群（Work）所有群成员都可以修改群基础资料。
