--- a/product/安全服务/安全营销运营平台/操作指南/资源库存/我的资源.md
+++ b/product/安全服务/安全营销运营平台/操作指南/资源库存/我的资源.md
@@ -6,7 +6,7 @@
 2. 在企业总库存页面，可查看自有总库存所有商品情况、免费库所有商品、采购库已购商品。
 
 ### 添加商品
-在企业总库存页面，支持如下三种商品入库方式。
+在企业总库存页面，支持如下两种商品入库方式。
 
 #### 方式1：用户自行上传
 1. 在企业总库存页面，单击**添加商品**，进入添加资源页面。
@@ -20,14 +20,7 @@
 3. 商品添加完成后，默认上线，单击**分配库存**进入分配库存阶段。
 ![](https://qcloudimg.tencent-cloud.cn/raw/a8b11688b01de3c33877e558a8d16a72.png)
 
-#### 方式2：使用腾讯提供的免费库存
-1. 在企业总库存页面，在库存下拉框中选择**可用腾讯库存** > **免费库**。
-![](https://qcloudimg.tencent-cloud.cn/raw/4b1e2a1e3185e5278c47c148cb9728c0.png)
-2. 在企业总库存页面，选择需要加入库存的商品，单击**分配库存**。
-![](https://qcloudimg.tencent-cloud.cn/raw/6b79a5729b7dbb5a65300fc16b514c23.png)
-3. 在分配库存域名，修改相关参数，单击**确认分配**，即可将商品加入对应的子库存中。
-
-#### 方式3：采购腾讯提供的付费库存
+#### 方式2：采购腾讯提供的付费库存
 1. 在 [资源中心页面](https://console.cloud.tencent.com/smop/purchase/stockMall)，选择所需商品，单击**立即购买**。
 2. 在立即购买页面，确认购买信息，单击**立即支付**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/b62e837c9cd564be146bacc42d5bea56.png)
@@ -257,4 +250,3 @@
 ## 资源消耗记录
 在 [资源消耗记录页面](https://console.cloud.tencent.com/smop/inventory/inventory_record)，左上角选择所需项目后，可查看项目中的商品消耗情况、消耗数量、已消耗商品的订单号等信息。
 ![](https://qcloudimg.tencent-cloud.cn/raw/d6afe48b4e17d2fe35fd9b86aee534a6.png)
-
