--- a/product/计算与网络/CKafka/操作指南/监控和告警/查看监控信息.md
+++ b/product/计算与网络/CKafka/操作指南/监控和告警/查看监控信息.md
@@ -9,6 +9,7 @@
 1. 登录 [CKafka 控制台](https://console.cloud.tencent.com/ckafka)。
 2. 在实例列表中，单击需要查看的“实例 ID/名称”，进入实例详情页。
 3. 在实例详情页顶部，单击**监控**，选择要查看的实例资源标签，设置好时间范围，可以查看实例监控数据。
+
 <table>
     <tr>
         <th>图标</th>
@@ -32,13 +33,14 @@
     </tr>
 </table> 
 
+
 ### 监控信息展示
 
 > ?您可以单击以下页签，查看实例、Topic、Consumer Group 监控信息的具体展示。
 
 <dx-tabs>
 ::: 实例
-![](https://qcloudimg.tencent-cloud.cn/raw/9ae7626831bfdcf86413092864aae58a.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/5f3da7735a3da0f19128c4ad20347674.png)
 :::
 ::: Topic
 选择分区后，可以查看指定 Partition 的监控数据。
@@ -76,7 +78,6 @@
 | 实例消费限流次数 (Count)          | 实例消费限流次数。                                           |
 | 实例生产带宽百分比(%)             | 实例生产带宽占配额百分比。                                   |
 | 实例生产限流次数 (Count)          | 实例生产限流次数。                                           |
-| 实例生产消息峰值带宽 (MB)         | 实例生产消息峰值带宽（包含副本生产的带宽）。                 |
 | 实例落盘的消息总条数 (Count)      | 实例落盘的消息总条数（不包含副本），按照所选择的时间粒度取最新值。 |
 | 实例消费流量 (MB)                 | 实例消费流量（不包含副本产生的流量），按照所选择的时间粒度统计求和。 |
 | 实例生产消息条数 (Count)          | 实例生产消息条数，按照所选择的时间粒度统计求和。             |
@@ -154,4 +155,4 @@ CKafka 监控 API 详情可参见如下文档：
 
 - [主题监控](https://cloud.tencent.com/document/product/248/45120)
 - [实例监控](https://cloud.tencent.com/document/product/248/45121) 
-- [消费分组监控](https://cloud.tencent.com/document/product/248/45122)
+- [消费分组监控](
