--- a/product/计算与网络/轻量应用服务器/购买指南/计费概述.md
+++ b/product/计算与网络/轻量应用服务器/购买指南/计费概述.md
@@ -32,7 +32,7 @@
 当实际使用流量超出基础套餐的月流量包限额，轻量应用服务器将按流量计费（仅统计服务器的出流量），即按公网传输的数据总量（单位为GB）计费。
 
 ### 计费模式
-超出月流量包限额的部分将按照 [套餐外超额流量定价](#OverRatedPrice) 每小时结算费用。
+超出月流量包限额的部分将按照**套餐外超额流量定价**每小时结算费用。
 
 ### 欠费停服
 当用户账号处于欠费状态，所有超出月流量包限额的实例将进入停服状态，没有超出月流量包限额的实例不受影响。如需恢复实例至可用状态，请将账户充值到余额大于0，或等待流量包按月重置后再进行使用。
