--- a/product/数据库/腾讯云图/用户手册/组件指南/地图/腾讯地图专业版/3D飞线层.md
+++ b/product/数据库/腾讯云图/用户手册/组件指南/地图/腾讯地图专业版/3D飞线层.md
@@ -1,4 +1,4 @@
-3D飞线层基于线要素表达两个空间位置间的有向关联。	
+3D飞线层在3D弧线层的基础上加入了起终点的辐射圈和散点要素，表达两个空间位置间的有向关联。	
 
 ## 参数配置
 | 参数 | 说明 | 默认值 |
@@ -20,6 +20,7 @@
 | **飞线宽度** | 飞线轨迹宽度 | 2 |
 | **飞线高度** | 飞线轨迹的最高点到地图表面的距离 | 0.8 |
 | **开启泛光** | 开启后，飞线轨迹有泛光效果 | 开启 |
+| **状态** | 开启后，根据数据中 status 属性判断飞线的状态，赋予不同状态的飞线不同颜色属性 | 不开启 |
 
 ## 辐射圈样式参数配置
 | 参数 | 说明 | 默认值 |
@@ -31,7 +32,7 @@
 | **圆形半径** | 单圈扩散最大半径 | 50 |
 | **圆圈数量** | 单次扩散包含的扩散圆数量 | 2 |
 | **泛光效果** | 开启后，扩散符号有泛光效果 | 开启 |
-| **状态** | 开启后，根据数据中 status 属性判断辐射圈的状态，赋予不同状态的辐射圈不同颜色属性 | 不开启 |
+
 
 ![](https://qcloudimg.tencent-cloud.cn/raw/4070f513f63c11495fc93823606d9467.png)
 
