--- a/product/数据库/腾讯云图/用户手册/组件指南/地图/腾讯地图专业版/腾讯地图专业版概述.md
+++ b/product/数据库/腾讯云图/用户手册/组件指南/地图/腾讯地图专业版/腾讯地图专业版概述.md
@@ -1,7 +1,7 @@
 腾讯地图专业版组件属于企业版组件，部分高级图层专业版可用。本文主要介绍腾讯地图专业版组件的基本参数配置。
 
 ## 概述
-腾讯地图专业版组件以腾讯地图产业版为底座，为用户提供高效的位置服务能力。企业版用户能够一键添加散点层、散点图标层、气泡效果层、全国区域热力层、区域下钻热力层、线热力层、2D经典热力层、2D弧线层、2D网格热力层、3D网格热力层、2D蜂窝热力层、动态轨迹层、区域高亮层、区域层、文字标注层、图片标注层、点聚合层、辐射圈层、围墙面层、动画场景层等子组件效果；专业版用户在此基础上还可添加3D经典热力层、3D弧线层、3D飞线层、3D蜂窝热力层、3D模型层。用户可以通过编辑丰富的配置项实时调整地图的渲染效果。
+腾讯地图专业版组件以腾讯地图产业版为底座，为用户提供高效的位置服务能力。企业版用户能够一键添加散点层、散点图标层、气泡效果层、全国区域热力层、区域下钻热力层、线热力层、2D经典热力层、2D弧线层、2D网格热力层、2D蜂窝热力层、动态轨迹层、区域高亮层、区域层、文字标注层、图片标注层、点聚合层、辐射圈层、围墙面层、动画场景层等子组件效果；专业版用户在此基础上还可添加3D经典热力层、3D弧线层、3D飞线层、3D网格热力层、3D蜂窝热力层、3D模型层。用户可以通过编辑丰富的配置项实时调整地图的渲染效果。
 
 ## 参数配置
 ### 位置大小
