--- a/product/数据库/腾讯云图/用户手册/组件指南/地图/腾讯地图专业版/动画场景层.md
+++ b/product/数据库/腾讯云图/用户手册/组件指南/地图/腾讯地图专业版/动画场景层.md
@@ -1,4 +1,4 @@
-相机控制器通过设定一系列场景相机状态的数据，自定义移动、缩放等相机动画效果，表达不同时间段的相机位置和视角等状态变化情况。
+动画场景层通过设定一系列场景相机状态的数据，自定义移动、缩放等相机动画效果，表达不同时间段的相机位置和视角等状态变化情况。
 
 ## 参数配置
 | 参数 | 说明 | 默认值 |
