--- a/product/安全服务/云访问安全代理/产品简介/应用场景.md
+++ b/product/安全服务/云访问安全代理/产品简介/应用场景.md
@@ -1,4 +1,4 @@
-云访问安全代理可适用于腾讯云内所有用户，是一款面向应用的防护服务，该服务用免开发改造的配置方式，快速解决用户加密需求，同时满足国密合规要求以及相关政策要求，帮助不同行业解决加密痛点问题。
+云访问安全代理可适用于腾讯云内注册了账号，并购买了 CASB 服务的用户，是一款面向应用的防护服务，该服务用免开发改造的配置方式，快速解决用户加密需求，同时满足合规要求以及相关政策要求，帮助不同行业解决加密痛点问题。
 
 ### 加密细控
 
@@ -8,5 +8,5 @@
 
 ### 快速部署
 - **痛点**：通过开发改造应用，实现数据存储加密、动态访问控制。改造应用成本高、风险大且周期长。
-- **方案**：面对企业信息系统多、数据库多的情况，云访问安全代理服务支持统一部署。用户只需配置数据库和 Proxy 的绑定关系，绑定后应用系统中的数据库地址和认证信息更改为 Proxy 的地址和认证信息，即可接入云访问安全代理。用户配置相应的加解密策略后，实时生效，就可以完成加密改造。
+- **方案**：面对企业信息系统多、数据库多的情况，云访问安全代理服务支持统一部署。用户只需配置数据库和 Proxy 的绑定关系，绑定后应用系统中的数据库地址和认证信息更改为 Proxy 的地址和认证信息，即可接入云访问安全代理。用户配置相应的加解密策略后就可以完成加密改造，实时生效。
 ![](https://qcloudimg.tencent-cloud.cn/raw/d60b0894f07e1382a842b10ce020fa04.png)
