--- a/product/安全服务/云访问安全代理/购买指南/欠费说明.md
+++ b/product/安全服务/云访问安全代理/购买指南/欠费说明.md
@@ -9,7 +9,7 @@
 ## 回收机制
 
 - **续费提醒**：云访问安全代理服务实例到期前7天内，系统会给您发送续费提醒通知。
-- **自动续费**：账户余额充足的情况下，若您已设置自动续费，设备在到期当日会执行自动续费。
+- **自动续费**：账户余额充足的情况下，若您已设置自动续费，资源在到期当日会执行自动续费。
 - **隔离期**：购买的云访问安全代理服务到期后，如果未续费，将进入7天的隔离期。
 	- 隔离期间您不能使用云访问安全代理服务与功能，被加密的数据也无法解密查看。
 	- 实例的数据会保留7天，若7天内完成续费，可以重新使用该实例。
