--- a/product/企业应用/腾讯问卷/常见问题/常见问题.md
+++ b/product/企业应用/腾讯问卷/常见问题/常见问题.md
@@ -41,7 +41,7 @@
 - 未到问卷结束时间后24小时。
 - 有未审核完的红包。
 - 发放的红包还未到24小时，有用户未领取（用户领取完后，会在24小时内退回未发完的红包）。
-- 可能是个别红包状态有异常。请联系官方客服：2852519734 告知问卷号。
+- 可能是个别红包状态有异常。请联系官方客服：2852519734，告知问卷号。
 
 
 ### 腾讯问卷可导出的问卷数量有限制吗	
