--- a/product/安全服务/云访问安全代理/购买指南/计费概述.md
+++ b/product/安全服务/云访问安全代理/购买指南/计费概述.md
@@ -5,7 +5,7 @@
 云访问安全代理服务的付费方式为：包年包月预付费方式。
 
 ## 计费详情
-云访问安全代理的加密、脱敏、审计服务目前处于收费阶段，用户在开通服务后可根据实际业务需求决定是否要购买数据库实例扩展包或存储扩容。云访问安全代理的敏感数据识别、访问控制两个功能，目前正在公测中，已购买加密、脱敏、审计服务的用户可在控制台申请免费试用。
+云访问安全代理的加密、脱敏、审计功能目前处于收费阶段，用户在开通服务后可根据实际业务需求决定是否要购买数据库实例扩展包、脱敏实例扩展包或存储扩容。云访问安全代理的敏感数据识别、访问控制两个功能，目前正在公测中，已购买加密、脱敏、审计服务的用户可在控制台申请免费试用。
 <table>
 <thead>
 <tr>
