--- a/product/计算与网络/轻量应用服务器/第三方教程.md
+++ b/product/计算与网络/轻量应用服务器/第三方教程.md
@@ -10,11 +10,9 @@
 ### 搭建网站
 - [搭建 WordPress 博客](https://cloud.tencent.com/developer/article/1692366)
 - [使用 calibre-web 搭建个人在线图书馆](https://cloud.tencent.com/developer/article/1814658)
-- [搭建专属云笔记服务](https://computeinit.com/archives/4003)
 - [搭建 WebMonitor 网页监测系统](https://computeinit.com/archives/3759)
 - [使用 Umami 搭建博客站点统计系统](https://cloud.tencent.com/developer/article/1884401)
 - [使用 Matomo 搭建网站流量统计系统](https://computeinit.com/archives/6082)
-- [使用 MM-Wiki 快速构建企业 Wiki 和团队知识分享平台](https://cloud.tencent.com/developer/article/1858770)
 
 
 
@@ -27,7 +25,6 @@
 - [安装 ServerStatus](https://computeinit.com/archives/4005)
 - [搭建个人 Git 仓库服务器](https://computeinit.com/archives/3753)
 - [安装 Portainer（Docker 可视化面板）](https://cloud.tencent.com/developer/article/1867994)
-
 
 
 
@@ -44,10 +41,18 @@
 ### 搭建游戏服务器
 [搭建 Minecraft 基岩（Bedrock）服务器](https://computeinit.com/archives/5035)
 
+### 搭建文档写作及分享平台
+- [搭建专属云笔记服务](https://computeinit.com/archives/4003)
+- [使用 MM-Wiki 快速构建企业 Wiki 和团队知识分享平台](https://cloud.tencent.com/developer/article/1858770)
+- [打造 Markdown 写作环境](https://cloud.tencent.com/developer/article/1831170)
+- [使用 ArtiPub 搭建一文多发平台](https://cloud.tencent.com/developer/article/1872740)
+- [使用 CodiMD 搭建在线 Markdown 文档平台](https://cloud.tencent.com/developer/article/1871946)
+
 ### 音视频场景
 - [使用 Jitsi Meet 搭建视频会议系统](https://computeinit.com/archives/6046)
 - [使用 Mirotalk 搭建视频聊天及屏幕共享平台](https://computeinit.com/archives/4560)
 - [使用 Koel 搭建音频流服务](https://cloud.tencent.com/developer/article/1848849)
+
 
 ### 通用场景
 - [如何拥有第一台轻量应用服务器？](https://cloud.tencent.com/developer/article/1801003)
@@ -56,12 +61,9 @@
 - [网页内容抓取入门](https://cloud.tencent.com/developer/article/1645139)	
 - [使用 iperf3 测试带宽	](https://cloud.tencent.com/developer/article/1838570)
 - [搭建 bitwarden 个人密码管理器](https://cloud.tencent.com/developer/article/1783188)
-- [打造 Markdown 写作环境](https://cloud.tencent.com/developer/article/1831170)
 - [使用 FRP 搭建内网穿透服务器](https://computeinit.com/archives/4363)
 - [使用 ServerStatus 云探针监控服务器](https://cloud.tencent.com/developer/article/1863933)
 - [使用 Screen 命令行管理器](https://computeinit.com/archives/5304)
-- [使用 ArtiPub 搭建一文多发平台](https://cloud.tencent.com/developer/article/1872740)
-- [使用 CodiMD 搭建在线 Markdown 文档平台](https://cloud.tencent.com/developer/article/1871946)
 - [使用 sysbench 对轻量数据库服务进行基准测试](https://cloud.tencent.com/developer/article/1868418)
 - [使用宝塔面板及 Squoosh 搭建图片在线压缩工具](https://cloud.tencent.com/developer/article/1840803)
 - [搭建 Guacamole 远程桌面代理服务器](https://cloud.tencent.com/developer/article/1794433)
