--- a/product/计算与网络/轻量应用服务器/第三方教程.md
+++ b/product/计算与网络/轻量应用服务器/第三方教程.md
@@ -44,7 +44,7 @@
 ### 搭建文档写作及分享平台
 - [搭建专属云笔记服务](https://computeinit.com/archives/4003)
 - [使用 MM-Wiki 快速构建企业 Wiki 和团队知识分享平台](https://cloud.tencent.com/developer/article/1858770)
-- [打造 Markdown 写作环境](https://cloud.tencent.com/developer/article/1831170)
+- [搭建可进行图片管理的在线 Markdown 文档平台](https://cloud.tencent.com/developer/article/1831170)
 - [使用 ArtiPub 搭建一文多发平台](https://cloud.tencent.com/developer/article/1872740)
 - [使用 CodiMD 搭建在线 Markdown 文档平台](https://cloud.tencent.com/developer/article/1871946)
 
