--- a/product/数据库/腾讯云图/用户手册/组件指南/地图/腾讯地图专业版/腾讯地图专业版概述.md
+++ b/product/数据库/腾讯云图/用户手册/组件指南/地图/腾讯地图专业版/腾讯地图专业版概述.md
@@ -19,10 +19,10 @@
 ### 参数设置
 | 参数 | 说明 | 默认值 |
 | --- | --- | --- |
-| **主题** | 三维城市整体主题风格 | 浅色风格 |
-| **缩放** | 地图底图的缩放层级 | 16.5 |
-| **俯仰角度** | 以右手坐标系 Y 轴方向为0俯仰角的场景相机俯仰角 | 85 |
-| **经纬度** | 相机视点中心经纬度，通常先调整默认区域省市区，再调整中心经纬度至目标经纬度 | 121.499377/31.243105 |
+| **主题** | 地图整体主题风格 | 墨渊 |
+| **缩放** | 地图底图的缩放层级 | 4.5 |
+| **俯仰角度** | 以右手坐标系 Y 轴方向为0俯仰角的场景相机俯仰角 | 30 |
+| **经纬度** | 相机视点中心经纬度 | 103.5973/36.916527 |
 | **鼠标拖拽** | 开启后，预览模式下能用鼠标拖拽场景进行交互 | 开启 |
 | **滚轮缩放** | 开启后，预览模式下能用鼠标滚轮缩放场景 | 开启 |
 | **隐藏文字** | 开启后，会隐藏POI信息 | 开启 |
