--- a/product/数据库/腾讯云图/用户手册/组件指南/地图/2D平面地图/迁移效果层.md
+++ b/product/数据库/腾讯云图/用户手册/组件指南/地图/2D平面地图/迁移效果层.md
@@ -11,9 +11,10 @@
 | **显示箭头** | 开启后，迁移飞线流光头部会显示箭头 | 不开启 |
 | **颜色** | 迁移飞线流光部分颜色 | #E81F1F |
 | **样式** | 迁移飞线流光部分样式 | 实线 |
-| **高度** | 迁移飞线弯曲弧度 | 60 |
-| **飞线宽度** | 交互点击选中后气泡颜色 | 5 |
-| **飞线长度** | 交互点击选中后气泡颜色 | 0.3 |
+| **高度** | 迁移飞线最高点高度 | 60 |
+| **飞线宽度** | 迁移飞线宽度 | 5 |
+| **飞线长度** | 迁移飞线流光部分长度 | 0.3 |
+| **状态** | 开启后，根据数据中 status 属性判断迁移飞线的状态，赋予不同状态的迁移飞线不同颜色属性 | 不开启 |
 
 ## 起终点图标样式参数配置
 | 参数 | 说明 | 默认值 |
@@ -26,7 +27,6 @@
 | **开始颜色** | 图标渐变的开始颜色 | RGBA(255,90,50,0.7) |
 | **结束颜色** | 图标渐变的结束颜色 | #FFF |
 | **渐变** | 开启后，图标颜色会由内到外渐变 | 不开启 |
-| **状态** | 开启后，根据数据中 status 属性判断迁移飞线的状态，赋予不同状态的迁移飞线不同颜色属性 | 不开启 |
 
 ![](https://qcloudimg.tencent-cloud.cn/raw/69fa5d29c51305b7b8e578f1f3fec472.png)
 
