--- a/product/数据库/腾讯云图/用户手册/组件指南/地图/腾讯地图/腾讯地图概述.md
+++ b/product/数据库/腾讯云图/用户手册/组件指南/地图/腾讯地图/腾讯地图概述.md
@@ -1,11 +1,5 @@
-腾讯地图组件属于基础版组件，部分高级图层企业版可用
-
 ## 概述
-三维城市是基于腾讯地图的位置服务能力，为服务数字孪生城市打造的高性能轻量级 Web3D 组件。三维城市组件以腾讯地图为底座，在其表面承载多源时空数据（包括城市建筑模型、空间热力、位置迁移等时空数据）。
-用户能够依托三维城市，一键添加三维模型层、经典热力层、动态散点层、动态轨迹层、区域高亮层、区域填充层、文字标签层、辐射扩散层、地理围栏层、图标标签层和相机控制器等子组件效果，和三维场景编辑器相比更适合搭建城市级三维场景，能够通过编辑丰富的配置项实时调整城市级3D渲染效果。
-
-相关大屏模板示例参看以下链接：
-[智慧城市](https://v.yuntus.com/tcv/ee67d0a6db4b827f3c7245c73049e32161788c9dcdd893c81db61f2e0e9fceed)
+企业版用户能够依托腾讯地图组件一键添加气泡效果层、迁移效果层、点热力效果层、网格热力效果层、自定义边界图层等子组件效果。
 
 ## 参数配置
 ### 位置大小
@@ -18,30 +12,27 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/0005e8e2ad223f6a3650324120a66767.png)
 
 ### 子组件管理
-三维城市组件默认开启三维模型层子组件，还默认展示在主界面的还包括相机控制器子组件，用户仅能通过![](https://qcloudimg.tencent-cloud.cn/raw/51dd260b24aa2db7f67426009b376ce9.png)控件选择上述组件的可视状态，无法直接删除或添加上述子组件。用户可以下拉列表添加三维模型层、经典热力层、动态散点层、动态轨迹层、区域高亮层、区域填充层、文字标签层、辐射扩散层、动态飞线层、地理围栏层、图标标签层等子组件，可多次重复添加上述子组件叠加效果，能通过![](https://qcloudimg.tencent-cloud.cn/raw/51dd260b24aa2db7f67426009b376ce9.png)控件选择该组件的可视状态，能通过![](https://qcloudimg.tencent-cloud.cn/raw/94a0e25b3580187a00af528b65f63236.png)控件删除该组件,通过![](https://qcloudimg.tencent-cloud.cn/raw/85fad3c0ae8506f0c6c398898f5cf843.png)控件修改该组件名称，通过![](https://qcloudimg.tencent-cloud.cn/raw/f7b5597b228ef2e59f1b4cfe1876959f.png)复制该组件 ID。
-
-![](https://qcloudimg.tencent-cloud.cn/raw/b59d1667b44958d41f55b7aa19be7a41.jpg)
+腾讯地图组件可用在下拉列表添加气泡效果层、迁移效果层、点热力效果层、网格热力效果层、自定义边界图层等子组件。可多次重复添加上述子组件叠加效果，能通过![](https://qcloudimg.tencent-cloud.cn/raw/51dd260b24aa2db7f67426009b376ce9.png)控件选择该组件的可视状态，能通过![](https://qcloudimg.tencent-cloud.cn/raw/94a0e25b3580187a00af528b65f63236.png)控件删除该组件,通过![](https://qcloudimg.tencent-cloud.cn/raw/85fad3c0ae8506f0c6c398898f5cf843.png)控件修改该组件名称，通过![](https://qcloudimg.tencent-cloud.cn/raw/f7b5597b228ef2e59f1b4cfe1876959f.png)复制该组件 ID。
 
 ### 参数设置
 | 参数 | 说明 | 默认值 |
 | --- | --- | --- |
-| **主题** | 三维城市整体主题风格 | 浅色风格 |
-| **缩放** | 地图底图的缩放层级 | 16.5 |
-| **俯仰角度** | 以右手坐标系 Y 轴方向为0俯仰角的场景相机俯仰角 | 85 |
-| **方位角度** | 以正北方向为0方位角的场景相机逆时针方位角 | 300 |
-| **中心经纬度** | 相机视点中心经纬度，通常先调整默认区域省市区，再调整中心经纬度至目标经纬度 | 121.499377/31.243105 |
-| **默认区域省/市/区** | 相机视点默认所在省市区，可联动中心经纬度，通常先调整默认区域省市区，再调整中心经纬度至目标经纬度 |上海市/黄浦区 |
-| **鼠标拖拽** | 开启后，预览模式下能用鼠标拖拽场景进行交互 | 开启 |
-| **滚轮缩放** | 开启后，预览模式下能用鼠标滚轮缩放场景 | 开启 |
-| **实时路况** | 开启后，会渲染当前城市的实时路况 |不开启|
+| **主题** | 地图整体主题风格 | 墨渊 |
+| **缩放** | 地图底图的缩放层级 | 4 |
+| **经纬度** | 相机视点中心经纬度 | 106.3971/39.9165 |
+| **比例尺控件** | 开启后，左下角会显示比例尺控件 | 不开启|
+| **拖拽** | 开启后，预览模式下能用鼠标拖拽场景进行交互 | 不开启 |
+| **滚动** | 开启后，预览模式下能用鼠标滚轮缩放场景 | 不开启 |
 | **双击放大** | 开启后，预览模式下能用鼠标双击放大场景 | 不开启|
-| **缩放控件** | 开启后，右上角会显示缩放控件 | 不开启|
-| **旋转控件** | 开启后，右上角会显示旋转控件 |不开启|
+| **名称来源** | 规定地图标记的POI内容文字是显示当前地图全部行政区域或由用户自定义显示部分行政区域 | 所有内置区域|
+| **字体字号** | 地图标记的POI内容文字字体字号 | 微软雅黑14 |
+| **文字颜色** | 地图标记的POI内容文字颜色 | #FFF |
+| **文字样式** | 地图标记的POI内容文字样式 | 默认值 |
+| **文字粗细** | 地图标记的POI内容文字粗细 | 默认值 |
 
-三维城市组件初始化场景包含了基础地图瓦片、三维建筑白模、天空盒、水体、树木等基础三维城市对象和通过三维模型层加载替换建筑白模的精细建筑模型，效果如下图所示：
-![](https://qcloudimg.tencent-cloud.cn/raw/c7f2761758e08bb52ff1861d7f83278b.jpg)
+![](https://qcloudimg.tencent-cloud.cn/raw/17a6b6921e6a0694141d5a415ba4fa55.png)
 
-![](https://qcloudimg.tencent-cloud.cn/raw/fe6b5c6962914253543c0b14243ea98b.jpg)
+![](https://qcloudimg.tencent-cloud.cn/raw/0baf78df410c0e3eab06ca5baa7eef8f.png)
 
 ## 数据配置
 暂无数据配置。
@@ -51,17 +42,11 @@
 
 | 动作名称 | 传入参数说明 |
 | --- | --- |
-| **选中动态散点层散点** | 目标选中散点的状态、经纬度和索引序号 |
-| **下钻场景** | 目标下钻场景所在行政区的 adcode | 
-| **上钻场景** | 目标上钻场景所在行政区的 adcode | 
-| **场景变化** | 目标场景所在行政区的 adcode，包含上钻和下钻场景 | 
+| **选中气泡层散点** | 目标选中气泡的状态、经纬度和索引序号 |
 
 事件配置如下所示：
 
 | 动作名称 | 传出参数说明 |
 | --- | --- |
-| **当动态散点层选中变更时** | 选中散点时，散点的状态、经纬度和索引序号 |
-| **当场景下钻时** | 下钻时，当前场景所在行政区的 adcode | 
-| **当场景上钻时** | 上钻时，当前场景所在行政区的 adcode | 
-| **场景变更时** | 当前场景所在行政区的 adcode，包含上钻和下钻场景 | 
+| **当气泡层选中变更时** | 选中气泡时，气泡的状态、经纬度和索引序号 |
 
