--- a/product/数据库/数据传输服务DTS/动态与公告/产品动态.md
+++ b/product/数据库/数据传输服务DTS/动态与公告/产品动态.md
@@ -4,6 +4,10 @@
 <tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=10%>发布时间</th><th width=20%>相关文档</th></tr>
 <tbody>
 <tr>
+<td>MongoDB 数据迁移支持多账号认证</td>
+<td>MongoDB 数据迁移场景中，支持 mongod、mondos、config server 账号密码不相同时的认证。</td>
+<td>2022-05</td>
+<td><a href="https://cloud.tencent.com/document/product/571/13724" target="_blank">MongoDB 迁移至 MongoDB</a></td></tr><tr>
 <td>计费版本功能增强</td>
 <td><li>同步支持按量计费转包年包月。</li>
 <li>迁移、同步按量计费任务支持销毁后恢复。</li></td>
