--- a/product/大数据与AI/互动白板/服务协议/服务等级协议.md
+++ b/product/大数据与AI/互动白板/服务协议/服务等级协议.md
@@ -5,7 +5,7 @@
 
 ## 1. 术语和定义
 
-#### 1.1 腾讯云互动白板（Tencent Interactive Whiteboard，TIW）
+#### 1.1 [腾讯云互动白板](https://cloud.tencent.com/document/product/1137)（Tencent Interactive Whiteboard，TIW）
 
 腾讯云提供的互动白板（Tencent Interactive Whiteboard，TIW）服务（以下简称“本服务”），是指包括互动涂鸦、轨迹实时同步、文档共享、媒体共享、文档转码、白板与音视频实时同步录制、回放、终端 SDK 接入和后台接口等能力。具体以您购买的服务及腾讯云提供的服务内容为准。
 
@@ -20,13 +20,12 @@
 #### 1.4 白板进房成功率
 
 您请求进白板房间，请求一次计一次请求，进房间成功即算作进房成功。
-白板进房成功率 =（白板进房成功次数 / 白板进房请求总次数）x 100%
+**白板进房成功率 =（白板进房成功次数 / 白板进房请求总次数）x 100%**
 
 #### 1.5 服务不可用分钟数
 
 本服务因腾讯云的原因在单位时间内（每5分钟为一个单位时间）白板进房成功率低于99%时，视为该单位时间内服务不可用。服务不可用持续5分钟及以上时，计为不可用分钟数；低于5分钟不计入不可用分钟数。
-说明：
-腾讯云互动白板服务统计以5分钟为一个单位，每天288个统计点，00:00:00时间点代表的时间区间为00:00:00 - 00:04:59，以此类推。
+>?腾讯云互动白板服务统计以5分钟为一个单位，每天288个统计点，00:00:00时间点代表的时间区间为00:00:00 - 00:04:59，以此类推。
 
 #### 1.6 服务月度总分钟数
 
@@ -36,7 +35,7 @@
 
 #### 2.1 服务可用性计算方式
 
-服务可用性 = 1 -（服务月度内不可用分钟数 / 服务月度总分钟数）x 100%
+**服务可用性 = 1 -（服务月度内不可用分钟数 / 服务月度总分钟数）x 100%**
 例如：2019年03月某一天上午10:00至10:30白板进房成功率为98%（白板进房成功率低于99%且持续超过5分钟），不可用时间为30分钟，则2019年03月服务可用性 = 1 -（30 / (31 x 24 x 60)）x 100% = 99.93%。
 
 #### 2.2 服务指标标准
@@ -50,7 +49,7 @@
 #### 3.1 赔偿标准
 （1）本服务赔偿以腾讯云**发放代金券**的形式实现，您应当遵守代金券的使用规则（包括使用期限等，具体以腾讯云官网发布的代金券相关规则为准）。发放的代金券不能折现、不开具发票，仅限您通过您的腾讯云账户购买本服务，不能购买其他的腾讯云服务，您也不可以将代金券进行转让、赠予等。
 
-（2）如果本服务月度没有达到服务可用性标准，赔偿额按照相应未达标服务月度单独计算，赔偿总额不超过相应未达标服务月度内您就本服务支付的相应月度服务费（此处的月度服务费不含用代金券、优惠券和服务费减免等抵扣的费用）。
+（2）如果本服务月度没有达到服务可用性标准，赔偿额按照相应未达标服务月度单独计算，**赔偿总额不超过相应未达标服务月度内您就本服务支付的相应月度服务费**（此处的月度服务费不含用代金券、优惠券和服务费减免等抵扣的费用）。
 
 | 服务可用性 |	赔偿的代金券金额 |
 | -- | -- |
@@ -73,7 +72,7 @@
 * 4.3 用户维护不当或保密不当致使数据、口令和密码等丢失或泄露所引起的。
 * 4.4 用户的网站、应用程序或数据信息等受到黑客攻击所引起的。
 * 4.5 用户未遵循腾讯互动白板产品使用文档或使用建议引起的。
-* 4.6 用户大规模流量突发增长（单房间用户数大于5千人或新增并发用户数超过3万人），且未提前5个工作日通过 提交工单、联系商务经理等方式告知腾讯云而引起的。
+* 4.6 用户大规模流量突发增长（单房间用户数大于5千人或新增并发用户数超过3万人），且未提前5个工作日通过 [提交工单](https://console.cloud.tencent.com/workorder)、联系商务经理等方式告知腾讯云而引起的。
 * 4.7 用户采用腾讯云非官网公开试运营产品、功能及权限引起的。
 * 4.8 用户因内容违规或其他合规问题引起的，包括但不限于黄赌毒和诈骗信息等。
 * 4.9 腾讯云公告提前告知用户由于重大活动或促销等引起的。
