--- a/product/安全服务/安全营销运营平台/操作指南/产品管理/商品管理.md
+++ b/product/安全服务/安全营销运营平台/操作指南/产品管理/商品管理.md
@@ -23,7 +23,7 @@
   ![](https://qcloudimg.tencent-cloud.cn/raw/9b84094c016b7a2a2553a806837c0cb1.png)
  - 删除分组：当分组中不存在商品时，可以单击**删除**，经过二次确定后即可删除该分组。
 ![](https://qcloudimg.tencent-cloud.cn/raw/91286361817f1690bd9c757886b548f3.png)
- - 重命名：单击**重命名**，经过二次确定后胡姐修改分组名称。
+ - 重命名：单击**重命名**，经过二次确定后即可修改分组名称。
 
 ## 商品兑换记录
 1. 登录 [安全营销运营平台控制台](https://console.cloud.tencent.com/smop/data/mallUser)，在左侧导览中，选择**商品管理** > **商品兑换记录**。
