--- a/product/安全服务/安全营销运营平台/操作指南/产品管理/商品管理.md
+++ b/product/安全服务/安全营销运营平台/操作指南/产品管理/商品管理.md
@@ -27,5 +27,5 @@
 
 ## 商品兑换记录
 1. 登录 [安全营销运营平台控制台](https://console.cloud.tencent.com/smop/data/mallUser)，在左侧导览中，选择**商品管理** > **商品兑换记录**。
-2. 在商品兑换记录页面，可以根据订单号、用户账号、商品来源等信息搜索兑换记录，搜搜后，可以**导出**将商品兑换记录下载至本地。
+2. 在商品兑换记录页面，可以根据订单号、用户账号、商品来源等信息搜索兑换记录，可以单击**导出**将商品兑换记录下载至本地。
 ![](https://qcloudimg.tencent-cloud.cn/raw/a2a29ce4b90b8bc20ddc371a13594494.png)
