--- a/product/安全服务/安全营销运营平台/操作指南/产品管理/积分任务.md
+++ b/product/安全服务/安全营销运营平台/操作指南/产品管理/积分任务.md
@@ -22,7 +22,7 @@
 6. 在任务详细配置页面，支持查看任务的详情，以及下线、删除、编辑任务、上线。
 ![](https://qcloudimg.tencent-cloud.cn/raw/f8a731901e917e8a78b50936e9c94e7f.png)
 操作说明：
-    - 详情：单击操作列的**详情**，可以查看改任务的任务名称、资源状态、任务分类等信息。
+    - 详情：单击操作列的**详情**，可以查看该任务的任务名称、资源状态、任务分类等信息。
     - 下线：单击操作列的**下线**，即可下线该任务。
     - 上传：单击操作列的**上线**，即可上线该任务。
     - 编辑：当任务处于下线状态时，单击**编辑**，可修改任务参数。
