--- a/product/监控与管理/云监控/使用指南/告警2.0/查看告警历史.md
+++ b/product/监控与管理/云监控/使用指南/告警2.0/查看告警历史.md
@@ -40,7 +40,7 @@
 <td>数据不足
 </td>
 <td>
-<li>产生告警的告警策略已被删除<br><li>云服务器从一个项目迁移至另一个项目<br><li>未安装或者卸载云监控控件，无数据上报
+<li>云服务器从一个项目迁移至另一个项目<br><li>未安装或者卸载云监控控件，无数据上报
 </td>
 <tr>
 <td>已失效
