--- a/product/大数据与AI/互动白板/服务协议/服务等级协议.md
+++ b/product/大数据与AI/互动白板/服务协议/服务等级协议.md
@@ -67,24 +67,24 @@
 
 **由以下原因导致的服务不可用，相应服务不可用时间不属于服务不可用的计算范畴和腾讯云的赔偿范畴，腾讯云无须向您承担责任：**
 
-* 4.1 用户自身故障所引起的。
-* 4.2 用户的疏忽或由用户授权的操作所引起的。
-* 4.3 用户维护不当或保密不当致使数据、口令和密码等丢失或泄露所引起的。
-* 4.4 用户的网站、应用程序或数据信息等受到黑客攻击所引起的。
-* 4.5 用户未遵循腾讯互动白板产品使用文档或使用建议引起的。
-* 4.6 用户大规模流量突发增长（单房间用户数大于5千人或新增并发用户数超过3万人），且未提前5个工作日通过 [提交工单](https://console.cloud.tencent.com/workorder)、联系商务经理等方式告知腾讯云而引起的。
-* 4.7 用户采用腾讯云非官网公开试运营产品、功能及权限引起的。
-* 4.8 用户因内容违规或其他合规问题引起的，包括但不限于黄赌毒和诈骗信息等。
-* 4.9 腾讯云公告提前告知用户由于重大活动或促销等引起的。
-* 4.10 腾讯云预先通知用户后进行系统维护所引起的，包括割接、维修、升级和模拟故障演练等。
-* 4.11 任何腾讯云设备以外的网络、设备故障或配置调整引起的。
-* 4.12 不可抗力以及意外事件引起的。
-* 4.13 非腾讯云原因造成的服务不可用或服务不达标的情况。
-* 4.14 属于相关法律法规、相关协议、相关规则或腾讯云单独发布的相关规则、说明等中所述的腾讯云可以免责、免除赔偿责任等的情况。
+4.1 用户自身故障所引起的。
+4.2 用户的疏忽或由用户授权的操作所引起的。
+4.3 用户维护不当或保密不当致使数据、口令和密码等丢失或泄露所引起的。
+4.4 用户的网站、应用程序或数据信息等受到黑客攻击所引起的。
+4.5 用户未遵循腾讯互动白板产品使用文档或使用建议引起的。
+4.6 用户大规模流量突发增长（单房间用户数大于5千人或新增并发用户数超过3万人），且未提前5个工作日通过 [提交工单](https://console.cloud.tencent.com/workorder/category)、联系商务经理等方式告知腾讯云而引起的。
+4.7 用户采用腾讯云非官网公开试运营产品、功能及权限引起的。
+4.8 用户因内容违规或其他合规问题引起的，包括但不限于黄赌毒和诈骗信息等。
+4.9 腾讯云公告提前告知用户由于重大活动或促销等引起的。
+4.10 腾讯云预先通知用户后进行系统维护所引起的，包括割接、维修、升级和模拟故障演练等。
+4.11 任何腾讯云设备以外的网络、设备故障或配置调整引起的。
+4.12 不可抗力以及意外事件引起的。
+4.13 非腾讯云原因造成的服务不可用或服务不达标的情况。
+4.14 属于相关法律法规、相关协议、相关规则或腾讯云单独发布的相关规则、说明等中所述的腾讯云可以免责、免除赔偿责任等的情况。
 
 ## 5. 其他
 
-* 5.1 **双方确认并在此认可：在任何情况下，若您在使用本服务过程中因腾讯云违约原因造成您损失的，腾讯云的违约赔偿总额不超过您已经支付的相应违约服务对应的服务费总额。**
-* 5.2 腾讯云有权根据变化适时或必要时对本协议条款做出修改，您可以在腾讯云官网的最新版本中查阅相关协议条款。如您不同意腾讯云对协议所做的修改，您有权停止使用本服务，如您继续使用本服务，则视为您接受修改后的协议。
-* 5.3 本协议作为《腾讯云服务协议》的附属协议，具有与《腾讯云服务协议》同等效力，本协议未约定事项，您需遵守《腾讯云服务协议》的相关约定。若本协议与《腾讯云服务协议》中的条款相冲突或不一致，则以本协议为准，但仅在该冲突或不一致范围内适用。（完）
+5.1 **双方确认并在此认可：在任何情况下，若您在使用本服务过程中因腾讯云违约原因造成您损失的，腾讯云的违约赔偿总额不超过您已经支付的相应违约服务对应的服务费总额。**
+5.2 腾讯云有权根据变化适时或必要时对本协议条款做出修改，您可以在腾讯云官网的最新版本中查阅相关协议条款。如您不同意腾讯云对协议所做的修改，您有权停止使用本服务，如您继续使用本服务，则视为您接受修改后的协议。
+5.3 本协议作为《腾讯云服务协议》的附属协议，具有与《腾讯云服务协议》同等效力，本协议未约定事项，您需遵守《腾讯云服务协议》的相关约定。若本协议与《腾讯云服务协议》中的条款相冲突或不一致，则以本协议为准，但仅在该冲突或不一致范围内适用。（完）
 
