--- a/product/视频服务/点播/产品介绍/产品功能/音视频转码处理.md
+++ b/product/视频服务/点播/产品介绍/产品功能/音视频转码处理.md
@@ -60,7 +60,7 @@
 - 支持将视频中的音频轨删除。
 
 
-### 视频 AI
+### 音视频 AI
 云点播视频 AI 支持视频智能识别、视频智能分析等功能，视频 AI 功能如下：
 - 采用优图 DeepEye 智能识别技术帮助视频识别令人反感的信息，大幅提升令人反感的视频的打击覆盖面和打击效率，协助用户建设绿色健康的社交网络环境。
 - 当前 DeepEye 引擎对于令人反感的信息识别精度已达到：万分之一错误率下，65%以上的正确拦截率；千分之一错误率下，80%以上的正确拦截率。
@@ -81,3 +81,15 @@
 云点播极速高清通过视频 AI 算法，根据视频场景分类实时识别结果，并结合视频源码率、帧率、分辨率、纹理、运动变化幅度以及机器负载和 ROI 检测等维度，选择最优编码参数，有效提升肉眼画质，减少带宽损耗，极速高清功能如下：
 
 通过智能场景识别、动态编码匹配、画质修复增强相结合的智能动态编码技术，使直播、点播等业务能够以更低的码率提供更高清的流媒体服务，从而给您带来全新的高清视野。
+
+
+### 图片即时处理
+云点播支持通过改写图片 URL 方式，简单、快速实现缩略图、裁剪等实时图片处理操作：
+- 支持指定宽高、长短边缩放。
+- 支持内切圆、矩形裁剪。
+
+
+### 图片智能识别
+云点播借助 AI 对图片内容是否有违规信息进行智能识别。智能识别的结果包括违规类别、违规标签、可信度分数、处理建议等，具体功能如下：
+- 支持智能识别图像画面（人、物体、场景）的令人反感的信息、令人不安全的信息、令人不适宜的信息信息。
+- 支持智能识别 OCR 文字（画面中的文字）的令人反感的信息、令人不安全的信息、令人不适宜的信息信息。
