--- a/product/计算与网络/CKafka/最佳实践/跨可用区部署.md
+++ b/product/计算与网络/CKafka/最佳实践/跨可用区部署.md
@@ -51,7 +51,7 @@ CKafka 的控制层和原生 Kafka 采用相同的技术方案，依赖 zookeepe
 
 考虑如下场景，当集群 Controller 节点和 zk 集群一个 zk 节点与其他节点发生网络隔离。此时，其他节点会重新竞选产生新的 Controller（因为 zk 集群多数节点网络通信正常，则 Controller 可以竞选成功）但是发生网络隔离的 Controller 仍然认为自己是 Controller 节点，这时候集群会出现脑裂的情况。
 
-此时客户端的写入需要分情况考虑，这里举个例子，当客户端的Ack策略等于2时，副本数为2，假设集群是3节点，脑裂之后会2:1分布，原先 leader 在 1节点地域的分区写入会报错，另一边则会正常写入。而一旦是3副本且配置了 Ack = -1 或者 all，则两边都不会写入成功。这时就需要根据具体参数配置来确定进一步的处理方案。
+此时客户端的写入需要分情况考虑，这里举个例子，当客户端的Ack策略等于 -1 或者 all，副本数为2时，假设集群是3节点，脑裂之后会2:1分布，原先 leader 在1节点地域的分区写入会报错，另一边则会正常写入。而一旦是3副本且配置了 Ack = -1 或者 all，则两边都不会写入成功。这时就需要根据具体参数配置来确定进一步的处理方案。
 
 在集群网络恢复后，客户端无需做操作即可恢复生产消费，但是由于服务端会重新对数据进行归一化，其中一个分裂节点的数据会被直接截断，但对于多副本跨区的数据存储方式来说，这种截断也并不会带来数据丢失。
 
