--- a/product/计算与网络/CKafka/最佳实践/跨可用区部署.md
+++ b/product/计算与网络/CKafka/最佳实践/跨可用区部署.md
@@ -43,7 +43,7 @@ CKafka 的控制层和原生 Kafka 采用相同的技术方案，依赖 zookeepe
 
 单个 AZ 不可用后，如前文对原理的解析，客户端会出现断连重连，重连后服务仍能正常提供。
 
-由于管控API服务目前不支持跨可用区部署，所以在单个AZ不可用之后，可能出现无法通过控制台创建Topic，配置ACL策略，查看监控等现象，但不会影响存量业务的生产消费
+由于管控 API 服务目前不支持跨可用区部署，所以在单个 AZ 不可用之后，可能出现无法通过控制台创建 Topic，配置 ACL 策略，查看监控等现象，但不会影响存量业务的生产消费
 
 ### 两个 AZ 网络隔离
 
@@ -70,7 +70,7 @@ CKafka 的控制层和原生 Kafka 采用相同的技术方案，依赖 zookeepe
      - 标准版：不支持多可用区部署。
      - 专业版：若当前地域支持多可用区部署，则最多可选择2个可用区进行部署。关于跨可用区部署原理介绍请参见 [跨可用区部署](https://cloud.tencent.com/document/product/597/52786)。
    - 产品规格：根据峰值带宽和磁盘容量选择对应的型号。
-   - 消息保留：范围在 24 - 2160 小时。
+   - 消息保留：范围在24小时 - 2160小时。
      在磁盘容量不足（即磁盘水位达到90%）时，将会提前删除旧的消息，以确保服务可用性。
    - 私有网络：若用户需要接入其他私有网络可参见 [添加路由策略](https://cloud.tencent.com/document/product/597/36348) 修改路由接入规则。
    - 标签：选填，具体使用方法可参见 [标签管理](https://cloud.tencent.com/document/product/597/33355)。
