--- a/product/大数据与AI/互动白板/互动白板3.0 Demo体验.md
+++ b/product/大数据与AI/互动白板/互动白板3.0 Demo体验.md
@@ -24,7 +24,7 @@
 ## 产品概述
 作为数字化多人在线实时协作白板，集思维导图、流程图、多种创意表达绘图工具于一体，聚焦多人协作下的场景解决方案，加快团队之间的信息流转，降低协作成本，提高业务效率。
 
-协同白板不仅仅是一块白板，更是一个无限空间的实时白板协作系统。为实现团队协作提供无限可能，包括但不限于敏捷协作、头脑风暴、线上教学、策略规划、项目管理、在线研讨以及在线设计等场景
+协同白板不仅仅是一块白板，更是一个无限空间的实时白板协作系统。为实现团队协作提供无限可能，包括但不限于敏捷协作、头脑风暴、线上教学、策略规划、项目管理、在线研讨以及在线设计等场景。
 
 ## 产品优势
 
