--- a/product/视频服务/实时音视频/SDK下载/版本发布日志（桌面浏览器）.md
+++ b/product/视频服务/实时音视频/SDK下载/版本发布日志（桌面浏览器）.md
@@ -7,6 +7,19 @@
 > - 建议您及时更新至最新版本，以便获得更好的产品稳定性及在线支持。
 > - 版本升级注意事项请参见：[升级指引](https://web.sdk.qcloud.com/trtc/webrtc/doc/zh-cn/tutorial-00-info-update-guideline.html)。
 
+## Version 4.12.4 @2022.05.07
+
+**Improvement**
+
+- 优化进房流程，降低进房耗时。
+- 优化小流切换逻辑。
+
+**Bug Fixed**
+
+- 修复偶现未抛出 stream-added 事件的问题。
+- 规避 Firefox 无法使用罗技摄像头采集 480p 的问题。
+- 修复 iPad WKWebview 引入 sdk 报错的问题。
+
 ## Version 4.12.3 @2022.04.19
 
 **Improvement**
@@ -24,7 +37,7 @@
 
 **Improvement**
 
-优化音量计算逻辑，降低内存占用及性能开销。
+- 优化音量计算逻辑，降低内存占用及性能开销。
 
 **Bug Fixed**
 
