--- a/product/安全服务/BGP 高防 IP/高防IP新版/操作指南/4业务接入/1.0端口接入.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/操作指南/4业务接入/1.0端口接入.md
@@ -1,7 +1,4 @@
->!
->- 高防资源提供 CNAME，并提供对应的高防 IP。
->- 此 IP 地址为当下 CNAME 解析的目的 IP 地址。
->- 此 IP 地址将不定期更换，请不要过度依赖此功能。
+>!高防资源提供 CNAME，并提供对应的高防 IP，此 IP 地址为当下 CNAME 解析的目的 IP 地址；此 IP 地址将不定期更换，请不要过度依赖此功能。
 
 ## 接入规则
 1. 登录 [DDoS 高防 IP（新版）管理控制台](https://console.cloud.tencent.com/ddos/antiddos-advanced/access/l4) ，在左侧目录中，单击**业务接入** > **端口接入**。
