--- a/product/安全服务/BGP 高防 IP/高防IP新版/快速入门/非网站业务接入.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/快速入门/非网站业务接入.md
@@ -59,4 +59,4 @@
 
 ### 修改 DNS 解析
 如需修改 DNS 解析，请参见 [配置智能调度](https://cloud.tencent.com/document/product/1014/44116#.E4.BF.AE.E6.94.B9-dns-.E8.A7.A3.E6.9E.90) 文档的修改 DNS 解析进行操作。
-
+>!高防资源提供 CNAME，并提供对应的高防 IP，此 IP 地址为当下 CNAME 解析的目的 IP 地址；此 IP 地址将不定期更换，请不要过度依赖此功能。
