--- a/product/计算与网络/专线接入/操作指南18-08-27/创建物理线路/专线接入点.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/创建物理线路/专线接入点.md
@@ -35,6 +35,10 @@
 <td >上海市静安区万荣路1268号</td>
 </tr>
 <tr >
+<td >上海 - F - 月湖</td>
+<td >上海市松江区经济技术开发区文翔路V-58号</td>
+</tr>
+<tr >
 <td >上海 - H - 外高桥 </td>
 <td >上海市浦东新区保税区</td>
 </tr>
