--- a/product/视频服务/点播/产品介绍/产品功能/音视频转码处理.md
+++ b/product/视频服务/点播/产品介绍/产品功能/音视频转码处理.md
@@ -91,5 +91,5 @@
 
 ### 图片智能识别
 云点播借助 AI 对图片内容是否有违规信息进行智能识别。智能识别的结果包括违规类别、违规标签、可信度分数、处理建议等，具体功能如下：
-- 支持智能识别图像画面（人、物体、场景）的令人反感的信息、令人不安全的信息、令人不适宜的信息信息。
-- 支持智能识别 OCR 文字（画面中的文字）的令人反感的信息、令人不安全的信息、令人不适宜的信息信息。
+- 支持智能识别图像画面（人、物体、场景）的违规信息。
+- 支持智能识别 OCR 文字（画面中的文字）的违规信息。
