--- a/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
@@ -16,7 +16,7 @@
 <td>-</td>
 </td>
 <tr>
-<td>高防 IP 域名接入列表增加提醒</td>
+<td>域名接入列表增加提醒</td>
 <td>在因证书问题配置失败时，右侧新增冒泡提醒。</td>
 <td>2022-04-14	</td>
 <td>
@@ -24,8 +24,8 @@
 </td>
 </tr>
 <tr>
-<td>高防 IP 企业版支持绑定弗吉尼亚的云资源</td>
-<td>高防IP企业版支持绑定弗吉尼亚的云资源，包括 CVM 和内网 CLB。</td>
+<td>企业版支持绑定弗吉尼亚的云资源</td>
+<td>高防 IP 企业版支持绑定弗吉尼亚的云资源，包括 CVM 和内网 CLB。</td>
 <td> 2022-04-10</td>
 <td>-</td>
 </tr>
