--- a/product/视频服务/视立方·音视频终端引擎/2-购买指南/价格总览.md
+++ b/product/视频服务/视立方·音视频终端引擎/2-购买指南/价格总览.md
@@ -23,17 +23,20 @@
 <td rowspan="3">腾讯云视立方 License 费用</td>
 <td>直播推流 License</td>
 <td>解锁直播推流（主播开播和主播观众连麦/主播跨房 PK）功能模块的授权。</td>
-<td><a href="#license" target="_blank">购买资源包获赠</a></td>
+<td><a href="https://cloud.tencent.com/document/product/1449/56972#.E5.9F.BA.E7.A1.80.E6.9C.8D.E5.8A.A1.E8.B4.B9.E7.94.A8
+">购买资源包获赠</a></td>
 </tr>
 <tr>
 <td>短视频 License</td>
 <td>解锁短视频（视频录制编辑/视频上传发布）功能模块的授权。</td>
-<td><a href="#license" target="_blank">购买资源包获赠</a></td>
+<td><a href="https://cloud.tencent.com/document/product/1449/56972#.E5.9F.BA.E7.A1.80.E6.9C.8D.E5.8A.A1.E8.B4.B9.E7.94.A8
+">购买资源包获赠</a></td>
 </tr>
 <tr>
 <td>腾讯特效 License</td>
 <td>解锁腾讯特效（美颜特效）功能模块的授权。</td>
-<td><a href="#value" target="_blank">购买套餐包获取</a></td>
+<td><a href="https://cloud.tencent.com/document/product/1449/56972#.E5.9F.BA.E7.A1.80.E6.9C.8D.E5.8A.A1.E8.B4.B9.E7.94.A8
+">购买套餐包获取</a></td>
 </tr>
 <tr>
 <td rowspan="4">其他云产品服务费用</td>
@@ -74,9 +77,9 @@
 
 #### 直播推流 License 计费价格
 
-| 直播推流 License 类型         | 有效期 | 对应云服务资源包                                             | 价格（元） | 获取方式                                            |
-| ----------------------------- | ------ | ------------------------------------------------------------ | ---------- | --------------------------------------------------- |
-| 直播推流 License （**测试**） | 28天   | -                                                            | 0          | [免费申请](https://console.cloud.tencent.com/vcube) |
+| 直播推流 License 类型         | 有效期 | 对应云服务资源包     | 价格（元） | 获取方式    |
+| -------------------- | ------ | --------------- | ---------- | --------------------------------------------------- |
+| 直播推流 License （**测试**） | 28天   | -           | 0          | [免费申请](https://console.cloud.tencent.com/vcube) |
 | 直播推流 License              | 1年    | 购买 **10TB** 云直播流量资源包赠送直播推流 License 一年使用授权 | 2,350      | [立即购买](https://buy.cloud.tencent.com/vcube)     |
 | 直播推流 License              | 1年    | 购买 **50TB** 云直播流量资源包赠送直播推流 License 一年使用授权 | 9,889      | [立即购买](https://buy.cloud.tencent.com/vcube)     |
 | 直播推流 License              | 1年    | 购买 **200TB** 云直播流量资源包赠送直播推流 License 一年使用授权 | 35,500     | [立即购买](https://buy.cloud.tencent.com/vcube)     |
@@ -85,17 +88,16 @@
 
 #### 短视频 License 计费价格
 
-| 短视频 License 类型               | 有效期 | 对应云服务资源包                                             | 价格（元） | 获取方式                                            |
-| --------------------------------- | ------ | ------------------------------------------------------------ | ---------- | --------------------------------------------------- |
-| 短视频基础版 License （**测试**） | 28天   | -                                                            | 0          | [免费申请](https://console.cloud.tencent.com/vcube) |
+| 短视频 License 类型    | 有效期 | 对应云服务资源包      | 价格（元） | 获取方式        |
+| --------------------------------- | ------ | ------------------------- | ---------- | ------------------------------------------- |
+| 短视频基础版 License （**测试**） | 28天   | -          | 0          | [免费申请](https://console.cloud.tencent.com/vcube) |
 | 短视频精简版 License              | 1年    | 购买 **10TB** 云点播流量资源包短视频精简版 License 一年使用授权 | 1,699      | [立即购买](https://buy.cloud.tencent.com/vcube)     |
 | 短视频基础版 License              | 1年    | 购买 **50TB** 云点播流量资源包短视频基础版 License 一年使用授权 | 8,399      | [立即购买](https://buy.cloud.tencent.com/vcube)     |
 | 短视频基础版 License              | 1年    | 购买 **200TB** 云点播流量资源包短视频基础版 License 一年使用授权 | 21,999     | [立即购买](https://buy.cloud.tencent.com/vcube)     |
 | 短视频基础版 License              | 1年    | 购买 **1PB** 云点播流量资源包短视频基础版 License 一年使用授权 | 109,999    | [立即购买](https://buy.cloud.tencent.com/vcube)     |
 
 
->? 短视频基础版 License 在精简版基础上增加滤镜、特效和转场等能力，快速轻松实现基于移动端的短视频应用，详情可参见 [短视频 License 功能详情](https://cloud.tencent.com/document/product/1449/56980#.E6.AD.A3.E5.BC.8F.E7.89.88-license
-)。
+>? 短视频基础版 License 在精简版基础上增加滤镜、特效和转场等能力，快速轻松实现基于移动端的短视频应用，详情可参见 [短视频 License 功能详情](https://cloud.tencent.com/document/product/1449/56980#.E6.AD.A3.E5.BC.8F.E7.89.88-license)。
 
 #### 计费说明
 
@@ -127,7 +129,7 @@
 [](id:value)
 #### 腾讯特效 License 计费价格
 
-**腾讯特效 License 通过购买腾讯特效 SDK 套餐包获得授权，解锁腾讯特效（美颜特效）功能模块**。音视频终端引擎（腾讯云视立方）[全功能版 SDK](https://cloud.tencent.com/document/product/1449/56924)，支持腾讯特效（美颜特效）功能模块，但需**增值购买**腾讯特效 SDK 套餐包获得腾讯特效 License 授权，以解锁腾讯特效（美颜特效）功能模块。
+**腾讯特效 License 通过购买腾讯特效 SDK 套餐包获得授权，解锁腾讯特效（美颜特效）功能模块**。音视频终端引擎（腾讯云视立方）[全功能版 SDK](https://cloud.tencent.com/document/product/1449/56924) 支持腾讯特效（美颜特效）功能模块，但需**增值购买**腾讯特效 SDK 套餐包获得腾讯特效 License 授权，以解锁腾讯特效（美颜特效）功能模块。
 
 
 腾讯特效 SDK 共有 10 个套餐，10 个套餐分为 2 个系列：**A 系列基础套餐**和 **S 系列高级套餐**。不同系列的不同套餐对应不同功能，您可根据您的需求挑选套餐。更多详细套餐功能请参见 [功能说明](https://cloud.tencent.com/document/product/616/67043)。
