--- a/product/计算与网络/无服务器云函数/产品简介/技术选型/函数选型.md
+++ b/product/计算与网络/无服务器云函数/产品简介/技术选型/函数选型.md
@@ -1,4 +1,4 @@
-# 函数选型
+
 
 为满足不同使用场景下的用户需求，云函数 SCF 提供了代码部署、[镜像部署](https://cloud.tencent.com/document/product/583/56051) 两种部署方式，提供了 [事件函数](https://cloud.tencent.com/document/product/583/9694#scf-.E4.BA.8B.E4.BB.B6.E5.87.BD.E6.95.B0)、[Web 函数](https://cloud.tencent.com/document/product/583/56124) 两种函数类型。
 
@@ -85,18 +85,14 @@
 ### 代码部署
 
 云函数 SCF 提供了三种代码部署的方式：
-
+![](https://qcloudimg.tencent-cloud.cn/raw/c51746454745f8874917793acd2a292b.png)
 - 在线上传 zip 包，仅支持 50 MB 以下的代码包
 - 在线上传文件夹，仅支持 250 MB 以下的文件夹
 - 通过 COS 上传 zip 包
 
-> ! 说明：
->
-> 上述三种代码部署方式，代码包大小均受限于代码包+关联的层版本大小总和小于等于 500 MB（压缩前）。
->
+>? 上述三种代码部署方式，代码包大小均受限于代码包与关联的层版本大小总和小于等于 500 MB（压缩前）。
 > 如超出 500 MB，建议精简代码包大小，或将部分依赖文件上传至 [对象存储 COS](https://cloud.tencent.com/document/product/436) 或者 [文件系统 CFS](https://cloud.tencent.com/document/product/582)，在函数代码中进行引用。如果依赖文件需要在代码初始化阶段引用，建议 [使用 CFS](https://cloud.tencent.com/document/product/583/46199)。
-
-![](https://qcloudimg.tencent-cloud.cn/raw/6eed6d411fbdd48d17c358ce182cb239.png)
+ 
 
 ### 镜像部署
 
