--- a/product/移动与通信/即时通信/12常见问题/群组相关问题.md
+++ b/product/移动与通信/即时通信/12常见问题/群组相关问题.md
@@ -54,7 +54,7 @@
    - Android：需要在登录 IM SDK 之前，通过 TIMManager > setUserConfig > TIMUserConfig > TIMGroupSettings > memberInfoOptions > setCustomTags 进行相应的配置。
    
    
- ### 如何获取直播群里的总成员数量？
+ ### 如何获取直播群的在线成员人数？
 AVChatRoom 在线人数，可以通过 SDK 接口（[Android](https://im.sdk.qcloud.com/doc/zh-cn/classcom_1_1tencent_1_1imsdk_1_1v2_1_1V2TIMGroupManager.html#a56840105a4b3371eeab2046d8c300bce
 )、[iOS](https://im.sdk.qcloud.com/doc/zh-cn/categoryV2TIMManager_07Group_08.html#ada2eadb44f6865e9848df94fb5bae4ae)、[Web](https://web.sdk.qcloud.com/im/doc/zh-cn/SDK.html#getGroupOnlineMemberCount)、[Flutter](https://pub.dev/documentation/tencent_im_sdk_plugin/latest/manager_v2_tim_group_manager/V2TIMGroupManager/getGroupOnlineMemberCount.html)）或者 [REST API](https://cloud.tencent.com/document/product/269/49180) 接口获取。
 
