--- a/product/计算与网络/无服务器云函数/产品简介/技术选型/云函数存储选型.md
+++ b/product/计算与网络/无服务器云函数/产品简介/技术选型/云函数存储选型.md
@@ -5,9 +5,8 @@
 
 ## 选型分析
 下表从不同维度比对了云函数 SCF 的这四种不同数据存储选项的特性：
-
 <table>
-  <tr>
+  <tbody><tr>
     <th class="align-left">条目</th>
     <th class="align-left">对象存储 COS</th>
     <th class="align-left">文件存储 CFS</th>
@@ -17,11 +16,13 @@
   <tr>
     <td>最大空间</td>
     <td>弹性</td>
+    <td>弹性</td>
     <td>512M</td>
-    <td>层版本代码+层所关联的函数版本代码大小总和为 500 MB（压缩前）</td>
+    <td>层版本代码 + 层所关联的函数版本代码大小总和为 500 MB（压缩前）</td>
   </tr>
   <tr>
     <td>持久性</td>
+    <td>持久化</td>
     <td>持久化</td>
     <td>临时存储</td>
     <td>持久化</td>
@@ -29,11 +30,14 @@
   <tr>
     <td>存储内容</td>
     <td>可写</td>
+    <td>可写</td>
+    <td>可写</td>
     <td>不可写</td>
   </tr>
   <tr>
     <td>存储类型</td>
     <td>对象</td>
+    <td>文件系统</td>
     <td>文件系统</td>
     <td>代码依赖归档</td>
   </tr>
@@ -41,21 +45,26 @@
     <td>事件源集成</td>
     <td>是</td>
     <td>否</td>
+    <td>否</td>
+    <td>否</td>
   </tr>
   <tr>
     <td>操作</td>
     <td>对象存储</td>
     <td>文件读写</td>
+    <td>文件读写</td>
     <td>运行时不可写</td>
   </tr>
   <tr>
     <td>计费</td>
-    <td><a href="https://cloud.tencent.com/document/product/436/16871" >存储、请求、管理</a></td>
-    <td><a href="https://cloud.tencent.com/document/product/582/9553" >存储</a></td>
+    <td><a href="https://cloud.tencent.com/document/product/436/16871" target="_blank">存储、请求、管理</a></td>
+    <td><a href="https://cloud.tencent.com/document/product/582/9553" target="_blank">存储</a></td>
+    <td>无额外计费</td>
     <td>无额外计费</td>
   </tr>
   <tr>
     <td>调用间共享</td>
+    <td>是</td>
     <td>是</td>
     <td>否</td>
     <td>是</td>
@@ -70,11 +79,13 @@
   <tr>
     <td>业务场景</td>
     <td>日志、业务文件存储</td>
+    <td>日志、业务文件存储</td>
     <td>业务产生的临时文件</td>
     <td>减少代码包提及或函数之间复用代码库、工具等</td>
   </tr>
-</table>
+</tbody></table>
 
+ 
 ## 存储类型
 ### 对象存储 COS
 
