--- a/product/计算与网络/云联网/常见问题.md
+++ b/product/计算与网络/云联网/常见问题.md
@@ -84,7 +84,7 @@
 云联网中的路由都是自动下发的，控制台暂无删除按钮。
 
 ### 云联网仅支持在腾讯云实现吗？
-腾讯云联网不仅支持腾讯云，也支持友商云。友商 VPC 和 IDC 可以通过 VPN 或专线网关连接。
+腾讯云云联网不仅支持腾讯云，也支持友商云。友商 VPC 和 IDC 可以通过 VPN 或专线网关连接。
 
 
 ## 跨境类
