--- a/product/移动与通信/即时通信/12常见问题/群组相关问题.md
+++ b/product/移动与通信/即时通信/12常见问题/群组相关问题.md
@@ -59,4 +59,4 @@ AVChatRoom 在线人数，可以通过 SDK 接口（[Android](https://im.sdk.qcl
 )、[iOS](https://im.sdk.qcloud.com/doc/zh-cn/categoryV2TIMManager_07Group_08.html#ada2eadb44f6865e9848df94fb5bae4ae)、[Web](https://web.sdk.qcloud.com/im/doc/zh-cn/SDK.html#getGroupOnlineMemberCount)、[Flutter](https://pub.dev/documentation/tencent_im_sdk_plugin/latest/manager_v2_tim_group_manager/V2TIMGroupManager/getGroupOnlineMemberCount.html)）或者 [REST API](https://cloud.tencent.com/document/product/269/49180) 接口获取。
 
 ### 群消息限制40条/秒，没有相关提示说明，如何来判断是否超了40条/秒的限制呢？
-超过频控后默认不会返回限频错误给到调用方，如果需要该错误返回给调用方，请提 [配置变更需求工单](https://cloud.tencent.com/document/product/269/3916) 给到平台。
+超过频控后，默认不会返回限频错误码给到调用方，如果需要该错误码（[10023](https://cloud.tencent.com/document/product/269/1671)）返回给调用方，请提 [配置变更需求工单](https://cloud.tencent.com/document/product/269/3916) 给到平台。
