--- a/product/监控与管理/云监控/产品动态.md
+++ b/product/监控与管理/云监控/产品动态.md
@@ -12,7 +12,7 @@
 </tr>
 <tr>
         <td>新增企业微信告警渠道</td>
-				<td> 用户可将告警通知发送给摸个企业微信用户，更多渠道保障您及时接收告警通知。</td>
+				<td> 用户可将告警通知发送给多个企业微信用户，更多渠道保障您及时接收告警通知。</td>
         <td>2022-02-17</td>
         <td>
         <a href="https://cloud.tencent.com/document/product/248/50404">查看配置文档</a></td>
