--- a/product/安全服务/云防火墙/操作指南/访问控制/互联网边界规则.md
+++ b/product/安全服务/云防火墙/操作指南/访问控制/互联网边界规则.md
@@ -20,6 +20,8 @@
 			- **访问目的类型**：
 				- **IP 地址**：任意 IP 地址或 CIDR 格式地址例如10.10.10.10或10.10.10.10/24。
 				- **地理位置**：为 IP 对应的实际地理位置，包含中国大陆地区各个省、中国港澳台地区及海外的各个州。
+>?仅企业版和旗舰版云防火墙支持地理位置功能，如需使用该功能，可以升级为 [企业版或旗舰版](https://cloud.tencent.com/document/product/1132/38049) 云防火墙。
+>
 				- **云厂商**：为各个云服务厂商品牌对应的服务 IP。
 				- **地址模板**：为用户自定义设置的 IP 地址模板。
 			- **规则优先级**：定义规则执行的优先级，最先执行或最后执行。
