--- a/product/移动与通信/邮件推送/快速入门.md
+++ b/product/移动与通信/邮件推送/快速入门.md
@@ -10,7 +10,7 @@
 登录 [邮件推送控制台](https://console.cloud.tencent.com/ses)。如果没有腾讯云账号，请参阅 [账号注册](https://cloud.tencent.com/document/product/378/17985)。
 ![](https://main.qcloudimg.com/raw/aa55df78517c47ef81d87a68a73abbc6.png)
 
-## 步骤2：企业认证[](id:Step2)
+## 步骤2：实名认证[](id:Step2)
 如果您的账号未实名认证，请到 [账户信息中心](https://console.cloud.tencent.com/developer) 进行实名认证，具体操作请参阅 [实名认证指引](https://cloud.tencent.com/document/product/378/3629)。
 ![](https://main.qcloudimg.com/raw/adc848aaa1fbdd931a07b981f5ad11eb.png)
 
