--- a/product/安全服务/云防火墙/操作指南/访问控制/数据库白名单.md
+++ b/product/安全服务/云防火墙/操作指南/访问控制/数据库白名单.md
@@ -1,30 +1,25 @@
-数据库白名单是基于 NAT 防火墙针对数据库的访问控制表，可以根据 IP、地理位置等对流量进行过滤。
+数据库管理是基于 NAT 防火墙针对数据库的访问控制表，可以根据 IP、地理位置等对流量进行过滤。
 
 ## 操作步骤
-1. 登录 [云防火墙控制台](https://console.cloud.tencent.com/cfw/ac/internet)，在左侧导航栏中，选择**访问控制** > **数据库白名单**，进入数据库白名单页面。
-2. 在数据库白名单页面的白名单列表中，可查看对应的数据库规则的详细信息。
-![](https://main.qcloudimg.com/raw/baedb160ed1883f8033de4d043127427.png)
-3. 在白名单列表，单击![](https://main.qcloudimg.com/raw/52a8aa107213789b4e87b3a1ce0dadc4.png)，并单击**确定**，可启用阻断白名单以外访问。
-![](https://main.qcloudimg.com/raw/a642d1ccf9a6f5c3aa09954816712c30.png)
-4. 在数据库白名单页面的最近操作记录中， 展示了用户最近对规则列表进行的操作。
->?
->- 单击**详情**可查看该条操作记录详情。
->- 单击**查看操作日志**，可查看详细操作记录。
->
-![](https://main.qcloudimg.com/raw/b35de2348223e6be7f9fb76b70f34aee.png)
-5. 在数据库白名单页面，单击**添加规则**，弹出添加白名单弹窗。
-![](https://main.qcloudimg.com/raw/0800377faaf60fb00371f37276ef1d24.png)
+1. 登录 [云防火墙控制台](https://console.cloud.tencent.com/cfw/ac/internet)，在左侧导航栏中，选择**零信任防护** > **数据库管理**。
+2. 在数据库管理页面的数据库资产概述中，可查看对应的数据库资产的详细信息。
+![](https://qcloudimg.tencent-cloud.cn/raw/12f7bbbebb477aa5ebc5ac54df11fdae.png)
+3. 在白名单列表，单击![](https://qcloudimg.tencent-cloud.cn/raw/2d89469d3aed4dee54b06c1f4f507c6a.png)，并单击**确定**，可启用阻断白名单以外访问。
+![](https://qcloudimg.tencent-cloud.cn/raw/6f127a9823b9387ba235eaa45da21075.png)
+4. 在数据库管理页面的最近操作记录中， 展示了用户最近对规则列表进行的操作，单击**查看全部**，可以跳转至零信任防护日志页面查看日志详情。
+![](https://qcloudimg.tencent-cloud.cn/raw/3ddad29c40cb6b773ced585d040875f1.png)
+5. 单击**白名单管控** > **添加规则**，弹出添加白名单弹窗。
+![](https://qcloudimg.tencent-cloud.cn/raw/8eeeaa36f530182aab9b0026ff274670.png)
 6. 在添加白名单弹窗，配置相关规则，单击**确定**，即可创建新规则。
->?
->- 访问源：白名单规则访问源对所有公网 IP 生效，支持 IP、CIDR 和地理位置等。
->- 访问目的：白名单规则访问目的仅对已接入的数据库资产生效，可配置单资产或资产分组。
->- 描述：用于描述规则，最多支持50个字符。
->- 在右侧操作栏单击**复制**，添加多条规则。
->
 ![](https://main.qcloudimg.com/raw/36bea5c7ef277a439ef6d439632fbbfa.png)
-7. 在数据库白名单页面，单击对应规则的**编辑**，可修改相关参数，单击**完成**，保存修改。
-![](https://main.qcloudimg.com/raw/8cc04669dcbe3027c40e9f620fc0adff.png)
-8. 在数据库白名单页面，单击对应规则的**删除**，弹出“确认删除”弹窗。
+**参数说明：**
+ - 访问源：白名单规则访问源对所有公网 IP 生效，支持 IP、CIDR 和地理位置等。
+ - 访问目的：白名单规则访问目的仅对已接入的数据库资产生效，可配置单资产或资产分组。
+ - 描述：用于描述规则，最多支持50个字符。
+ - 在右侧操作栏单击**复制**，添加多条规则。
+7. 在白名单管控页面，单击对应规则的**编辑**，可修改相关参数，单击**完成**，保存修改。
+![](https://qcloudimg.tencent-cloud.cn/raw/51540ee212a781de0bf837dea073f2d7.png)
+8. 在白名单管控页面，单击对应规则的**删除**，弹出“确认删除”弹窗。
 ![](https://main.qcloudimg.com/raw/cf595aa4968c653e893fc8ed28284b9c.png)
 9. 在“确认删除”弹窗，单击**确定**，即可删除该规则。
 >!删除操作不可恢复，请谨慎操作。
