--- a/product/大数据与AI/自定义模块文字识别/常见问题.md
+++ b/product/大数据与AI/自定义模块文字识别/常见问题.md
@@ -4,7 +4,7 @@
 
 ### 什么是键值对(KV) ？设置键值对应注意哪些事项？
 
-键值对 (key:value) 是是一种简单的对应关系，键后面对应着相应的值。传Key适用于相同版式或相同Key情况下的不同图片，可将其值传入以对后续传入的图片做Value匹配和矫正。
+键值对 (key:value) 是一种简单的对应关系，键后面对应着相应的值。传Key适用于相同版式或相同Key情况下的不同图片，可将其值传入以对后续传入的图片做Value匹配和矫正。
 锚点字段设置建议如下：
 - 字段内容：固定不变；对于不同锚点字段，文字不会重复出现。
 - 数量：不做限制，根据业务需要进行设置；
