--- a/product/视频服务/直播/购买指南/折扣活动.md
+++ b/product/视频服务/直播/购买指南/折扣活动.md
@@ -1,9 +1,9 @@
 ## 活动1：【快直播特惠活动】更优惠的快直播流量抵扣比例，最低可享0.26元/G
 
-#### 活动详情
+### 活动详情
 云直播新推出快直播特惠活动，活动期间购买云直播流量包-快直播特惠，可以用更优惠的抵扣比例抵扣快直播的流量消耗，[单击抢购](https://buy.cloud.tencent.com/leb)。
 
-#### 活动对象
+### 活动对象
 腾讯云官网已注册的国内站用户均可参与（协作者与子用户账号除外）。
 
 ## 活动2：【最快30分钟上线应用】音视频低代码 UI 组件方案
