--- a/product/安全服务/云访问安全代理/购买指南/计费概述.md
+++ b/product/安全服务/云访问安全代理/购买指南/计费概述.md
@@ -17,24 +17,24 @@
 </thead>
 <tbody><tr>
 <td rowspan=2>数据加密</td>
-<td>标准版</td>
+<td>数据加密实例	</td>
 <td>支持配置3个数据库实例</td>
 <td>3,000</td>
 </tr>
 <tr>
- <td>数据库实例扩展包</td>
-<td>支持配置1个数据库实例</td>
+ <td>数据加密实例扩展包</td>
+<td>每个扩展包支持配置1个数据库实例</td>
 <td>900</td>
 </tr>
 <tr>
 <td rowspan=2>数据脱敏</td>
-<td>标准版</td>
+<td>数据脱敏实例</td>
 <td>支持配置3个数据库实例</td>
 <td>3,000</td>
 </tr>
 <tr>
- <td>脱敏实例扩展包</td>
-<td>支持配置1个数据库实例</td>
+ <td>数据脱敏实例扩展包</td>
+<td>每个扩展包支持配置1个数据库实例</td>
 <td>900</td>
 </tr>
 <tr>
