--- a/product/安全服务/云访问安全代理/购买指南/欠费说明.md
+++ b/product/安全服务/云访问安全代理/购买指南/欠费说明.md
@@ -9,7 +9,8 @@
 ## 回收机制
 - **续费提醒**：云访问安全代理服务实例到期前7天内，系统会给您发送续费提醒通知。
 - **自动续费**：账户余额充足的情况下，若您已设置自动续费，资源在到期当日会执行自动续费。
-- **隔离期**：购买的子功能到期后，如果未续费，将进入7天的隔离期，未到期的功能仍可以正常使用。
+- **隔离期**：
+        - 购买的子功能到期后，如果未续费，将进入7天的隔离期，未到期的功能仍可以正常使用。
 	- 隔所有功能都被隔离后，代理不再接受新建连接，存量的连接可以正常转发，但仅提供转发功能，加密、脱敏、审计等所有功能不生效。
 	- 子功能的数据会保留7天，若7天内完成续费，可以重新使用该子功能。
 - **销毁数据**：
