--- a/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
+++ b/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
@@ -32,14 +32,14 @@
 </dx-alert>
 6. 以主域名 sampledomain.com 为例添加记录，填入上述 [步骤4](#step4) 对应的“记录值”。
   - DKIM 验证，填入2条记录：
-  主机记录填入：mail._domainkey
+  主机记录填入：`mail._domainkey`
 	记录类型选择：TXT
 	记录值中填入您的“记录值”。
 ![](https://qcloudimg.tencent-cloud.cn/raw/62d7c629ad48caef5716da173a6842a8.png)
 <dx-alert infotype="explain" title="">
 如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：mail._domainkey.abc。
 </dx-alert>
-  - 主机记录填入：qcloud._domainkey
+  - 主机记录填入：`qcloud._domainkey`
 	记录类型选择：TXT
 	记录值中填入您的“记录值”。
 ![](https://qcloudimg.tencent-cloud.cn/raw/3571c6795ad5a5ffff44659f1cf2fca8.png)
@@ -47,7 +47,7 @@
 如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：qcloud._domainkey.abc。
 </dx-alert>
   - SPF 验证：
-  主机记录中填入：@
+  主机记录中填入：`@`
 	记录类型选择：TXT
 	记录值中填入您的“记录值”。
 ![](https://qcloudimg.tencent-cloud.cn/raw/f5a86eb5666a4359dc792e85e6cd3297.png)
@@ -55,18 +55,18 @@
 如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：abc。
 </dx-alert>
   - DMARC 验证：
-  主机记录中填入：_dmarc
+  主机记录中填入：`_dmarc`
 	记录类型选择：TXT
-	记录值中填入：v=DMARC1; p=none; ruf=mailto:sampledomain.com; adkim=r; aspf=r
+	记录值中填入：`v=DMARC1; p=none; ruf=mailto:sampledomain.com; adkim=r; aspf=r`
 ![](https://qcloudimg.tencent-cloud.cn/raw/4cf8a07f30a1fc7e095fc88ecac9a744.png)
 <dx-alert infotype="explain" title="">
 sampledomain.com 为示例，此处应替换为您的发信地址。
 如果您的发信地址是 abc.sampledomain.com，请替换为 abc.sampledomain.com。
 </dx-alert>
   - MX 验证
-  主机记录中填入：@
+  主机记录中填入：`@`
 	记录类型选择：TMXXT
-	记录值中填入：mxbiz1.qq.com
+	记录值中填入：`mxbiz1.qq.com`
 ![](https://qcloudimg.tencent-cloud.cn/raw/250a72988dfdcfb70f590161a767d10f.png)
 <dx-alert infotype="explain" title="">
 如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：abc。
