--- a/product/互联网中间件/TDMQ CMQ 版/02 购买指南/价格总览.md
+++ b/product/互联网中间件/TDMQ CMQ 版/02 购买指南/价格总览.md
@@ -91,6 +91,6 @@ API 调用单价（单位：元/百万次调用）如下表所示：
 | 主题资源占用（新品优惠期间） | 50个    | 分地域 |
 
 免费额度会优先抵扣每个主账号每个地域下各集群的累计用量，相同地域的不同队列/主题之间共享额度。
-> 新品优惠期过后，队列资源占用和主题资源占用将恢复为各5个(分地域)
+>? 新品优惠期过后，队列资源占用和主题资源占用将恢复为各5个(分地域)。
 
 
