--- a/product/大数据与AI/万象优图2.0/控制台指南/存储桶管理/图片处理/盲水印.md
+++ b/product/大数据与AI/万象优图2.0/控制台指南/存储桶管理/图片处理/盲水印.md
@@ -20,5 +20,5 @@
 3.  单击【编辑】将状态修改为“开启”状态，然后单击【保存】，即可开启盲水印功能。
 4.  开启功能后，您可使用 [API 接口](https://cloud.tencent.com/document/product/460/19017) 在 [上传图片时添加](https://cloud.tencent.com/document/product/460/19017#.E8.AF.B7.E6.B1.82.E4.B8.80.EF.BC.9A.E4.B8.8A.E4.BC.A0.E6.97.B6.E6.B7.BB.E5.8A.A0.E7.9B.B2.E6.B0.B4.E5.8D.B0) 盲水印或 [对云上的图片进行添加](https://cloud.tencent.com/document/product/460/18147#.E4.BA.91.E4.B8.8A.E6.95.B0.E6.8D.AE.E5.A4.84.E7.90.86)，此外您也可以在 [下载时添加](https://cloud.tencent.com/document/product/460/19017#.E8.AF.B7.E6.B1.82.E4.BA.8C.EF.BC.9A.E4.B8.8B.E8.BD.BD.E6.97.B6.E6.B7.BB.E5.8A.A0.E7.9B.B2.E6.B0.B4.E5.8D.B0) 盲水印。当您需要检测图片时，您可直接使用提取接口进行盲水印提取。
 
->?盲水印为付费服务，具体费用请参见 [计费与定价](https://cloud.tencent.com/doc/product/460/6970)。另外数据万象为每个账户提供每月3000张的**免费体验额度**，超出后将正常计费。未使用额度不会累积至下一月。
+>?盲水印为付费服务，具体费用请参见 [计费与定价](https://cloud.tencent.com/doc/product/460/6970)。数据万象在每个账户在首次产生该服务用量后，将发放一个用量为6000次，有效期为2个月的免费额度资源包，超出用量或资源包到期后将正常计费。
 
