--- a/product/移动与通信/邮件推送/快速入门.md
+++ b/product/移动与通信/邮件推送/快速入门.md
@@ -29,9 +29,9 @@
 ![](https://main.qcloudimg.com/raw/87cd06c55bb1127c553d74b6fd1abfe3.png)
 >!域名是邮箱的基础，代表发件人的企业身份。验证发信域名需要配置域名的 DNS 信息，因此您必须具有该域名的管理权限。
 
-4. DNS 配置完毕后，单击**验证**。
+4. 单击发信域名的**验证**操作，根据发信域名配置界面的记录值配置域名的 DNS 信息。
    ![](https://main.qcloudimg.com/raw/4a779f6308b912880df0ea1628b90e42.png)
-5. 进入验证信息页面。单击**提交验证**来获得发信域名的认证。
+5. DNS 配置完毕后，在发信域名配置界面单击**提交验证**进行验证，需要确保“记录值”与“当前值”完全一致，且状态为“已验证”。
    ![](https://qcloudimg.tencent-cloud.cn/raw/0feea51797fd1c0022a75828d4953d25.png)
 
 ## 步骤5：发信地址配置[](id:Step5)
