--- a/product/大数据与AI/腾讯云安全隐私计算/常见问题.md
+++ b/product/大数据与AI/腾讯云安全隐私计算/常见问题.md
@@ -1,5 +1,5 @@
 ### 腾讯云隐私计算是什么？        
-腾讯云隐私计算（Cloud Security Privacy Computing，CSPC）是腾讯云推出的以联邦学习（FL）、安全多方计算（MPC）、可信执行环境（TEE）等隐私数据保护技术为基础的隐私计算平台，产品针对机器学习算法进行定制化的隐私保护改造，保证原始数据不出本地即可完成联合建模，同时支持安全多方 PSI（隐私保护集合求交技术）、安全隐私查询、安全统计分析，提供基于硬件的 TEE 可信执行环境。通过腾讯云隐私计算，各合作机构既能保障数据安全，又能发挥数据最大价值，很好地解决了业界数据孤岛的难题。
+腾讯云隐私计算（Privacy Computing）是腾讯云推出的以联邦学习（FL）、安全多方计算（MPC）、可信执行环境（TEE）等隐私数据保护技术为基础的隐私计算平台，产品针对机器学习算法进行定制化的隐私保护改造，保证原始数据不出本地即可完成联合建模，同时支持安全多方 PSI（隐私保护集合求交技术）、安全隐私查询、安全统计分析，提供基于硬件的 TEE 可信执行环境。通过腾讯云隐私计算，各合作机构既能保障数据安全，又能发挥数据最大价值，很好地解决了业界数据孤岛的难题。
 
 ### 什么是联邦学习？
 联邦学习又名联邦机器学习、联合学习、联盟学习。联邦机器学习是一个分布式机器学习框架，它将传统的机器学习进行定制化的隐私保护改造，能够在合规的基础上帮助多个机构，在进行数据合作及联合建模时，有效地保护用户隐私及数据安全。
