--- a/product/数据库/数据库智能管家/操作指南/Redis诊断优化/实时会话.md
+++ b/product/数据库/数据库智能管家/操作指南/Redis诊断优化/实时会话.md
@@ -6,13 +6,10 @@
 ## 性能监控/会话统计
 
 1. 登录 [DBbrain 控制台](https://console.cloud.tencent.com/dbbrain/session)，在左侧导航选择**诊断优化**，在上方选择对应数据库，然后选择**实时会话**页。
-2. 在左上方选择Proxy ID，可显示对应的性能监控和会话统计信息。
-
+2. 在左上方选择 Proxy ID，可显示对应的性能监控和会话统计信息。<br>
 <img src="https://qcloudimg.tencent-cloud.cn/raw/0c6e67a6238824e14d97c4493304e19e.png" style="zoom:65%;" />
-
-
 
 ## 一键 Kill 会话
 
-点击**一键 Kill**，即可 Kill 掉所有的会话。
+单击**一键Kill**，即可 Kill 掉所有的会话。
 ![](https://main.qcloudimg.com/raw/5f805cc97bb838e066a1b8459e89d594.png)
