--- a/product/大数据与AI/腾讯云安全隐私计算/产品简介/产品概述.md
+++ b/product/大数据与AI/腾讯云安全隐私计算/产品简介/产品概述.md
@@ -8,7 +8,7 @@
 在完成隐私计算平台部署后，需要在前端控制台进行隐私计算节点注册，用户可以添加、删除节点，在添加节点时会进行节点校验，校验通过的节点之间即可开始数据合作。
 
 ### 数据接入
-云隐私计算平台可以直接对接大数据生态，支持分布式文件存储系统 HDFS 及本地文件系统，能够灵活地适应用户的实际情况。在整个流程中都不涉及用户数据上传，仅是在平台注册数据。
+腾讯云隐私计算平台可以直接对接大数据生态，支持分布式文件存储系统 HDFS 及本地文件系统，能够灵活地适应用户的实际情况。在整个流程中都不涉及用户数据上传，仅是在平台注册数据。
 
 ### 数据检测
 在注册数据流程中需要进行数据本地检测，检测数据格式是否符合规范。例如，是否使用相同的用户 ID 主键、是否是相同的时间粒度、是否使用相同的加密方法等，只有双方/多方数据都符合规范才能进行数据合作。
