--- a/product/大数据与AI/腾讯云安全隐私计算/产品简介/应用场景.md
+++ b/product/大数据与AI/腾讯云安全隐私计算/产品简介/应用场景.md
@@ -1,5 +1,5 @@
 ### 跨机构数据合作场景
-在银行、保险、政务、教育、电商等众多行业的业务场景中，都会涉及到跨机构、跨部门的数据合作，但数据隐私泄露问题又是一个长期无法逾越的障碍。云隐私计算平台正好完美地解决了这个问题，只需在合作方之间传递加密中间参数即可完成联合建模，最大化保障了合作方之间的数据安全。
+在银行、保险、政务、教育、电商等众多行业的业务场景中，都会涉及到跨机构、跨部门的数据合作，但数据隐私泄露问题又是一个长期无法逾越的障碍。腾讯云隐私计算平台正好完美地解决了这个问题，只需在合作方之间传递加密中间参数即可完成联合建模，最大化保障了合作方之间的数据安全。
 
 ### 银行信贷场景
 在银行信贷业务整个闭环中，从引流阶段的营销服务，到贷前、贷中、贷后全面风控服务，腾讯云隐私计算平台衔接各方数据能力，在保障各方数据隐私安全的基础上助力银行信贷业务顺利展开。
