--- a/product/管理与支持/账号相关/账号信息/绑定登录方式.md
+++ b/product/管理与支持/账号相关/账号信息/绑定登录方式.md
@@ -101,6 +101,6 @@
 >?如果当前身份验证方式不可用，可以单击**使用备选校验方式**，通过备选校验方式验证身份。
 >
 4. 打开企业微信扫一扫，扫描弹窗的二维码，完成授权后，即可完成账号绑定。
->!您需要为企业微信管理员，或联系企业微信管理员完成 [企业微信腾讯云助手管理员授权](https://cloud.tencent.com/document/product/378/64226)，方可绑定企业微信登录方式。
+>!您需要为企业微信管理员，或联系企业微信管理员完成 [企业微信腾讯云助手管理员授权](https://cloud.tencent.com/document/product/378/64226) 后，即可绑定企业微信登录方式。
 
 
