--- a/product/监控与管理/云监控/云产品指标/云产品指标3.0/容器服务/容器.md
+++ b/product/监控与管理/云监控/云产品指标/云产品指标3.0/容器服务/容器.md
@@ -215,7 +215,7 @@ Namespace = QCE/TKE2
 &Instances.N.Dimensions.2.Value=node
 
 **根据节点 ID 入参取值如下：**
-&Namespace=QCE/TKE
+&Namespace=QCE/TKE2
 &Instances.N.Dimensions.0.Name=tke_cluster_instance_id
 &Instances.N.Dimensions.0.Value=cls-fvkxp123
 &Instances.N.Dimensions.1.Name=workload_name
@@ -224,7 +224,7 @@ Namespace = QCE/TKE2
 &Instances.N.Dimensions.2.Value=ins-nwjhh123
 
 **根据 Pod 名称入参取值如下：**
-&Namespace=QCE/TKE
+&Namespace=QCE/TKE2
 &Instances.N.Dimensions.0.Name=tke_cluster_instance_id
 &Instances.N.Dimensions.0.Value=cls-fvkxp123
 &Instances.N.Dimensions.1.Name=workload_name
