--- a/product/大数据与AI/图片标签/购买指南/计费概述.md
+++ b/product/大数据与AI/图片标签/购买指南/计费概述.md
@@ -1,8 +1,8 @@
 图像分析产品（含 [图像标签](https://cloud.tencent.com/document/api/865/35471)、[商品识别](https://cloud.tencent.com/document/api/865/36457)、[车辆识别](https://cloud.tencent.com/document/api/865/36456)、[车辆识别（增强版）](https://cloud.tencent.com/document/api/865/72553)、[商品识别-微信识物版](https://cloud.tencent.com/document/api/865/43354)、[图像智能裁剪](https://cloud.tencent.com/document/api/865/38899)、[图像质量评估](https://cloud.tencent.com/document/api/865/36899)、[图像搜索](https://cloud.tencent.com/document/product/865/63483)）已正常计费售卖，产品价格见下文。[图像清晰度增强](https://cloud.tencent.com/document/api/865/36902) 当前处于免费公测阶段，暂不支持开通后付费和购买预付费资源包。
 
 ## 免费额度
-图像标签、商品识别、商品识别-微信识物版、车辆识别、车辆识别（增强版）、图像搜索、智能裁剪、图像质量评估服务开通后，可获得共计10000次/月的免费调用额度。每月免费额度将以免费资源包的形式配送，并在计费结算时优先扣减。
-如果您同时开通了以上多项服务，则按照多项服务接口调用的总次数共同享受10000次/月的免费调用额度。
+- 图像标签、商品识别、商品识别-微信识物版、车辆识别、车辆识别（增强版）、图像搜索、智能裁剪、图像质量评估服务开通后，可获得共计10000次/月的免费调用额度。每月免费额度将以免费资源包的形式配送，并在计费结算时优先扣减。
+- 如果您同时开通了以上多项服务，则按照多项服务接口调用的总次数共同享受10000次/月的免费调用额度。
 
 ## 图像理解价格说明
 图像理解产品目前仅支持后付费，暂不支持购买预付费资源包抵扣。后付费价格如下：
