--- a/product/大数据与AI/图片标签/购买指南/计费概述.md
+++ b/product/大数据与AI/图片标签/购买指南/计费概述.md
@@ -118,7 +118,7 @@
   </tbody>
 </table>
 
-## 图像搜索预付费
+### 图像搜索预付费
 预付费资源包有效期为1年，1年内若资源包次数未使用完，则过期作废。目前仅相似图像搜索（创建图片库 GroupType 参数值为6）可支持预付费资源包，相同图像搜索和商品图像搜索（创建图片库 GroupType 参数值为1 - 5）暂不支持。
 
 <table>
