--- a/product/安全服务/云访问安全代理/产品简介/产品优势.md
+++ b/product/安全服务/云访问安全代理/产品简介/产品优势.md
@@ -5,7 +5,7 @@
 ## 高性能支持
 云访问安全代理提供高性能加解密服务，可以为企业应用提供高性能的 SM4 算法实现高速加解密，保障业务效率不受影响。
 ## 高可靠密钥管理
-数据加密密钥由腾讯云密钥管理系统统一管理，密钥管理系统底层使用 FIPS-140-2 认证的硬件安全模块（HSM），并支持权限管控和内置审计，保护您的密钥安全。
+数据加密密钥由腾讯云密钥管理系统统一管理，密钥管理系统底层使用硬件安全模块（HSM），并支持权限管控和内置审计，保护您的密钥安全。
 ## 灵活部署
 面对企业信息系统多且数据库多的情况，云访问安全代理服务支持统一部署。应用系统无需改造，用户只需配置数据库和 Proxy 的绑定关系，绑定后应用系统中的数据库地址和认证信息更改为 Proxy 的地址和认证信息，即可接入云访问安全代理。用户配置相应的加解密策略后就可以完成加密改造，实时生效。
 ## 可用性保障
