--- a/product/安全服务/云访问安全代理/产品简介/产品概述.md
+++ b/product/安全服务/云访问安全代理/产品简介/产品概述.md
@@ -6,7 +6,7 @@ CASB 提供可视化管理控制台，管理员可进行加解密权限规则的
 ### 对应用透明
 Proxy 对应用透明，不改变之前的运行机制，写入加密，读取解密。
 ### 高可靠密钥管理
-数据加密密钥由腾讯云 [密钥管理系统](https://cloud.tencent.com/product/kms)（KMS）统一管理，密钥管理系统底层使用国家密码局或 FIPS-140-2 认证的硬件安全模块（HSM），并支持权限管控和内置审计，保护您的密钥安全。
+数据加密密钥由腾讯云 [密钥管理系统](https://cloud.tencent.com/product/kms)（KMS）统一管理，密钥管理系统底层使用硬件安全模块（HSM），并支持权限管控和内置审计，保护您的密钥安全。
 ### 灵活部署
 以少改造的配置方式，用户只需配置数据库和 Proxy 的绑定关系，绑定后应用系统中的数据库地址和认证信息更改为 Proxy 的地址和认证信息，即可接入云访问安全代理。用户配置相应的加解密策略后就可以完成加密改造，实时生效。
 ### 大规模部署统一管控
