--- a/product/存储与CDN/对象存储 4.0/购买指南/计费项/请求费用.md
+++ b/product/存储与CDN/对象存储 4.0/购买指南/计费项/请求费用.md
@@ -4,7 +4,7 @@
 - 后端请求次数：指生命周期沉降、归档回热到期后对标准存储副本的删除请求，跨地域复制的读取和写入请求、清单报告投递等请求次数。
 
 根据不同存储类型和使用场景，划分为读写请求费用、智能分层对象监控费用、深度归档取回请求费用。其中以下费用，视用户实际使用情况收取：
-- 智能分层对象监控费用：当存储桶开通了智能分层存储配置，并上传了智能分层存储类型的数据至该存储桶，则会产生该费用，该费用以上传的对象个数进行计算。
+- 智能分层对象监控费用：当存储桶开通了智能分层存储配置，并上传了智能分层存储类型的数据至该存储桶，则会产生该费用，该费用按照大于或等于64KB的对象个数进行计算。
 - 深度归档取回请求费用：当用户对深度归档存储类型的数据进行恢复（解冻）操作时，会产生取回请求次数，由此收取深度归档取回请求费用。
 
 
@@ -22,14 +22,14 @@
 
 | 计费项说明           | 适用的存储类型            | 适用的计费方式                                   |
 | ------------------------------------------------------------ | ---------------------- | ------------------------------------------- |
-| 智能分层存储类型数据的对象监控费用，用于监控数据的访问情况。  |  智能分层存储  |  按量计费     |
+| 智能分层存储类型数据的对象监控费用，用于监控数据的访问情况。  |  智能分层存储（多 AZ）、智能分层存储  |  按量计费     |
 
 
 ## 深度归档取回请求费用
 
 | 计费项说明           | 适用的存储类型            | 适用的计费方式                                   |
 | ------------------------------------------------------------ | ---------------------- | ------------------------------------------------ |
-|   对深度归档存储类型的数据进行恢复（解冻）时，COS 将按照发送的恢复请求次数收取深度归档取回请求费用。</br></br>根据用户可选的两种恢复模式（即标准模式和批量模式）划分为以下费用：</br></br><li>深度归档标准取回请求费用</li><li>深度归档批量取回请求费用</li>   |  深度归档存储   |    按量计费   |
+|   对深度归档存储类型的数据进行恢复（解冻）时，COS 将按照发送的恢复请求次数收取深度归档取回请求费用。</br></br>根据用户可选的两种恢复模式（即标准取回模式和批量取回模式）划分为以下费用：</br></br><li>深度归档标准取回请求费用</li><li>深度归档批量取回请求费用</li>   |  深度归档存储   |    按量计费   |
 
 
 ## 请求费用的计费方式和计算方法
@@ -88,6 +88,11 @@
    <tr>
       <td>归档存储</td>
       <td>恢复后，按照标准存储请求计费</td>
+   </tr>
+   <tr>
+      <td>北京、上海、广州</td>
+      <td>智能分层存储（多 AZ）</td>
+      <td><li>读写请求：0.01<li>智能分层对象监控（元/万个）：0.175</td>
    </tr>
    <tr>
       <td>北京、上海、广州、重庆、东京、新加坡</td>
