--- a/product/数据库/云存储Redis/操作指南/诊断优化/异常诊断.md
+++ b/product/数据库/云存储Redis/操作指南/诊断优化/异常诊断.md
@@ -1,6 +1,11 @@
 ## 功能介绍
 
 异常诊断以智能监控采集的数据为依据，提供7 * 24小时实时数据库异常诊断分析。针对数据库实例的性能问题，基于 SQL 优化引擎、性能分析引擎、规则引擎的处理分析，从规格配置、SQL 分析、业务逻辑、使用合理性等维度给出实例当前与历史的健康评估结果，包括：健康得分、健康风险等级等，帮助运维人员直观、清晰、快速地掌握数据库实例的运行状况。
+
+
+## 查看诊断优化
+1. 登录 [Redis 控制台](https://console.cloud.tencent.com/redis)，在左侧导航栏，选择**诊断优化**。
+2. 在**数据库智能管家 DBbrain** 的**诊断优化**页面，选择**异常诊断**页面，即可查看异常诊断详情。
 <img src="https://qcloudimg.tencent-cloud.cn/raw/0f5f7b603f770360483d8de52e91aab8.png" style="zoom: 80%;" />
 
 ## 概览
@@ -46,5 +51,4 @@
 </tbody></table>
 
 ![](https://qcloudimg.tencent-cloud.cn/raw/ba5a992deb7a469f52c3efcc41838260.png)
-
 
