--- a/product/企业应用/腾讯问卷/常见问题/常见问题.md
+++ b/product/企业应用/腾讯问卷/常见问题/常见问题.md
@@ -258,14 +258,14 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 
 - 电脑端：
  - 步骤1：登录官网
-在 PC 端进入 [腾讯问卷官网](https://wj.qq.com)，单击**登录**或**立即使用**。
+在 PC 端进入 [腾讯问卷官网](https://wj.qq.com)，单击**登录**或**免费使用**。
 <img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/68837aea9428aecb8bf81d22c9e8a346.png" />
  - 步骤2：选择登录方式
 在登录界面选择 QQ、微信、企业微信，通过 App 扫码登录，或使用 QQ 账号密码登录。
-<img style="width:400px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/ccc179ed385fa0acd7d11ea17bf6c5f7.png" />
+<img style="width:300px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/516f7e789486f14e0f5223a4afa8219c.png" />
  - 步骤3：开始使用
 选择相应账号登录后，选择**免费试用**或**企业使用**即可进入“创建问卷”页面。
-<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/b18d9e7c9ccc0386110b8c000acd0f62.png" />
+<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/ad448cddae44fec216dc3980bcb4d830.png" />
 - 移动端：
  - 微信公众号登录
     1.在手机微信里搜索公众号“腾讯问卷”并关注。
@@ -290,9 +290,15 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 
 
 
-### 腾讯问卷如何自定义问卷逻辑	
+### 腾讯问卷如何自定义问卷逻辑?	
 腾讯问卷自定义逻辑可以快速地操作问卷底层能力，实现复杂的逻辑定制，提高问卷逻辑设置的效率。目前已经实现了多条件组合的显示逻辑、非逻辑、题目内容引用替换、题目选项分组随机等功能，更多功能正在陆续开发中，目前自定义逻辑处于对外推广阶段，限时免费使用。
-![](https://qcloudimg.tencent-cloud.cn/raw/e3a788bd6061cba77d569f05197b4715.png)
+
+| 语句 | 效果 | 
+|---------|---------|
+| if Q1A1 then show Q2 | 第一题选了 A 选项，显示第二题。 | 
+| if Q1 and Q2A1 then hide Q3 | 第一题已答、且第二题选中了第一个选项，隐藏第三题。 | 
+| if Q1A1 then branch from Q1 to END | 第一题选了第一个选项，跳转到结束页（甄别题）。 | 
+| replace "XXX" in Q2 title with Q1 | 将第二题题目中的 XXX 文本，替换为第一道题的答案。 | 
 
 
 
@@ -310,14 +316,14 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 电脑端进入问卷设置界面开启**微信红包奖励**，单击**设置微信红包**可以选择**拼手气红包**或**等额红包**。二者区别在于中奖的用户拿到的红包金额是相同的，还是随机不等的。设定好后单击**确定**会自动跳转至付款页面，使用微信扫码支付成功后即添加成功。
 
 
-### 腾讯问卷标题支持上传图片吗	
+### 腾讯问卷标题支持上传图片吗?
 腾讯问卷标题**不支持**上传图片，只能输入文字将其加粗或者插入超链。
 ![](https://qcloudimg.tencent-cloud.cn/raw/81076e02cbe12390341c0059d0582e48.png)
 如果需要添加背景图可以使用企业版皮肤设置，详情请参见 [官网文档](https://cloud.tencent.com/document/product/1304/49118)。
 
 
 
-### 腾讯问卷欢迎语的字数限制	
+### 腾讯问卷欢迎语的字数限制?
 腾讯问卷欢迎语字数限制是100个字，如下图所示：
 ![](https://qcloudimg.tencent-cloud.cn/raw/e65ae98c9f22bdab2fc90ccb8db3de61.png)
 >?免费版本和企业版本腾讯问卷欢迎语字数限制是一致的。
@@ -341,7 +347,7 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
  - [选项编辑](https://cloud.tencent.com/document/product/1304/49149#.E9.80.89.E9.A1.B9.E7.BC.96.E8.BE.91)
 
 
-### 腾讯问卷如何发布问卷	
+### 腾讯问卷如何发布问卷?
 - 电脑端
  - 问卷完成编辑之后，需要进行投放，腾讯问卷可以方便地通过问卷链接、社交网分享、二维码等进行投放。
  - [问卷发布](https://cloud.tencent.com/document/product/1304/49145#.E9.97.AE.E5.8D.B7.E5.8F.91.E5.B8.83)
@@ -367,7 +373,7 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 在问卷设置界面开启“允许用户修改答案”，答题者提交问卷后可再次进入问卷修改已提交的内容。如果已开启限答，则仅保留最后一份提交问卷；如果不限回答次数，则保留每次提交的问卷。
 
 
-### 腾讯问卷如何设置协助管理员	
+### 腾讯问卷如何设置协助管理员?	
 - **QQ 用户**：正确输入协助者的 QQ 号，单击**+**，即可完成添加。
 - **微信用户**：将微信用户界面下方二维码发给相应人员进行扫码加入。
 >?微信用户协助管理员需要在二维码有效期内扫码。
@@ -381,7 +387,7 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 >?单次最大投放数量为6000，如需投放更多，请在首次投放完以后单击**再次投放**或**重新投放**分批投放。
 
 
-### 腾讯问卷如何删除协助管理员	
+### 腾讯问卷如何删除协助管理员?	
 单击协作者右侧的蓝色字体**全部权限**，再单击删除协管员即可。
 >!问卷原始创建者不能被删除。
 
