--- a/product/数据库/数据库智能管家/操作指南/MySQLTDSQL-C诊断优化/实时会话.md
+++ b/product/数据库/数据库智能管家/操作指南/MySQLTDSQL-C诊断优化/实时会话.md
@@ -35,7 +35,7 @@ DBbrain 提供持续 Kill 会话的功能，用户可设置 Kill 会话的条件
 1. 设置持续 Kill 任务。
    填写会话条件（USER、HOST、DB、COMMAND、Info、TIME），选择执行方式，即可完成设置持续 Kill 任务。
 >!
->- 可输入一个或多个条件，各条件之间是“与”的关系，可结束除系统连接外的所有满足设置条件的会话。
+>- 可输入一个或多个条件，各条件之间是“与”的关系，设置后可结束除系统连接外的所有满足设置条件的会话。
 >- 如仅填写 Time 及持续时长，将会一键 Kill 掉满足条件的全部会话，请谨慎操作。
 >
 ![](https://main.qcloudimg.com/raw/15a98bf6e785eceeb34a080455a5e9c1.png)
