--- a/product/数据库/数据库智能管家/操作指南/Redis诊断优化/异常诊断.md
+++ b/product/数据库/数据库智能管家/操作指南/Redis诊断优化/异常诊断.md
@@ -13,7 +13,7 @@
 概览框可显示数据库的整体健康得分、异常诊断事件时间轴、拓扑图等信息。
 
 - 在概览框上方可选择实时或者历史统计时间范围。
-- 在诊断事件的时间轴上，可查看每次诊断事件发生的时间点。将鼠标悬浮在时间轴上，按“ctrl+鼠标上滑”/“ctrl+鼠标下滑”，可放大/缩小时间轴范围。
+- 在诊断事件的时间轴上，可查看每次诊断事件发生的时间点。将鼠标悬浮在时间轴上，上下滚动鼠标滑轮，可放大/缩小时间轴范围。
   ![](https://qcloudimg.tencent-cloud.cn/raw/91cde10ddbc8a66d7aef7d49d5cd48a7.png)
 - 健康得分显示实例的CPU 使用率、内存使用率、连接使用率、读请求命中率。数据库健康得分结合 AI，更贴合用户数据库真实运行状况。
 - 拓扑图显示实例的节点架构和发生告警的节点位置，将鼠标悬浮在对应节点上，也可查看节点指标统计信息。
