--- a/product/存储与CDN/对象存储 4.0/控制台指南/内容审核/存量审核/设置历史数据审核任务.md
+++ b/product/存储与CDN/对象存储 4.0/控制台指南/内容审核/存量审核/设置历史数据审核任务.md
@@ -18,8 +18,8 @@
  - **COS 清单报告**：您可以选择扫描由 [COS 清单功能](https://cloud.tencent.com/document/product/436/33702) 生成的清单列表，并将清单列表文件存放到当前存储桶内。
  - **URL 列表文件**：您可以选择扫描指定的 URL 列表文件，目前支持 txt 格式，每行一条 url。使用该方式暂不支持进行视频审核和文本审核。
 7. 单击**下一步**。
-8. 在“审核策略”界面，设置审核策略，配置相应的审核文件类型、审核场景类型，单击**下一步**。
-![](https://qcloudimg.tencent-cloud.cn/raw/1ba95674fa329265c8c43011a3ef079c.png)
+8. 在“审核策略”界面，按需开启审核策略，并配置相应的审核文件类型、审核场景类型，单击**下一步**。
+![](https://qcloudimg.tencent-cloud.cn/raw/42d26297991e70cbc57e1e64d29f3526.png)
  - **审核图片：**
     - **审核后缀**：支持审核 jpg、jpeg、png、bmp、webp、gif 后缀的图片。
 >! 智能判断后缀可以识别包含上述6种常见的图片后缀及一些特殊的后缀。
