--- a/product/企业通信/云呼叫中心/产品简介/功能列表/音视频通话.md
+++ b/product/企业通信/云呼叫中心/产品简介/功能列表/音视频通话.md
@@ -201,7 +201,7 @@
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 style='height:15.75pt'>转人工过程中放音</td>
-  <td class=xl66 width=447 style='width:335pt'>可以设置转接人工过程中的放音（如：正在转接人工，请稍候。）</td>
+  <td class=xl66 width=447 style='width:335pt'>可以设置转接人工过程中的放音（如：正在转接人工，请稍后。）</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 style='height:15.75pt'>转人工过程中排队等待音</td>
