--- a/product/企业通信/云呼叫中心/产品简介/功能列表/在线会话.md
+++ b/product/企业通信/云呼叫中心/产品简介/功能列表/在线会话.md
@@ -361,7 +361,7 @@
  </tr>
  <tr height=38 style='height:28.5pt'>
   <td height=38 style='height:28.5pt'>转人工提示语	</td>
-  <td class=xl66 width=525 style='width:394pt'>可设置转接人工过程中给用户发送的提示语（如：正在转接人工，请稍候）。</td>
+  <td class=xl66 width=525 style='width:394pt'>可设置转接人工过程中给用户发送的提示语（如：正在转接人工，请稍后）。</td>
  </tr>
  <tr height=38 style='height:28.5pt'>
   <td height=38 style='height:28.5pt'>转人工排队提示消息</td>
