--- a/product/安全服务/数据安全网关/操作指南（SaaS 型）/运维配置手册/运维任务/创建运维任务.md
+++ b/product/安全服务/数据安全网关/操作指南（SaaS 型）/运维配置手册/运维任务/创建运维任务.md
@@ -5,7 +5,7 @@
 - 管理员已告知运维人员登录地址。
 - 管理员已授予运维人员访问主机的权限。
 - 运维人员已完成 [账号激活](https://cloud.tencent.com/document/product/1025/55183#step2)。
-- 堡垒机已升级到专业版。
+- 已购买专业型堡垒机，或已将堡垒机升级到专业版。
 
 
 ## 操作步骤
