--- a/product/数据库/数据传输服务DTS/动态与公告/产品动态.md
+++ b/product/数据库/数据传输服务DTS/动态与公告/产品动态.md
@@ -4,6 +4,11 @@
 <tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=10%>发布时间</th><th width=20%>相关文档</th></tr>
 <tbody>
 <tr>
+<td>SQL Server 数据迁移支持云联网</td>
+<td>SQL Server 数据迁移支持云联网方式。</td>
+<td>2022-05</td>
+<td><a href="https://cloud.tencent.com/document/product/571/61271" target="_blank">SQL Server 迁移至 SQL Server</a></td></tr><tr>
+<tr>
 <td>MongoDB 数据迁移支持多账号认证</td>
 <td>MongoDB 数据迁移场景中，支持 mongod、mondos、config server 账号密码不相同时的认证。</td>
 <td>2022-05</td>
