--- a/product/安全服务/数据安全网关/产品动态.md
+++ b/product/安全服务/数据安全网关/产品动态.md
@@ -19,7 +19,7 @@
 </tr>
 <tr>
 <td>支持 SQL Server 数据库纳管</td>
-<td>支持纳管 SQL Server 数据库。</td>
+<td>数据库纳管功能适配 SQL Server 数据库。</td>
 <td>2022-05-12</td>
 <td>
 <a href="https://cloud.tencent.com/document/product/1025/63993">同步数据库 </a>
